Update almost all strings to actual state.

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -3,7 +3,6 @@
     <string name="about_author">Autor:</string>
     <string name="about_blizzard">Blizard</string>
     <string name="about_cloudy">Zamračeno</string>
-    <string name="about_cloudy_night">Zamračená noc</string>
     <string name="about_dust">Prach</string>
     <string name="about_fog">Mlha</string>
     <string name="about_for_translators">Pro překladatele:</string>
@@ -13,17 +12,13 @@
     <string name="about_light_rain">Mrholení</string>
     <string name="about_light_snow">Jemný sníh</string>
     <string name="about_overcast">Zamračeno</string>
-    <string name="about_rain">Déšť</string>
     <string name="about_rainstorm">Průtrž</string>
-    <string name="about_showers">Přeháňky</string>
+    <string name="about_rain_drizzle">Přeháňky</string>
     <string name="about_sleet">Plískanice</string>
-    <string name="about_snow">Sněžení</string>
     <string name="about_social">Sociální odkazy:</string>
     <string name="about_sunny">Jasno</string>
-    <string name="about_sunny_night">Jasná noc</string>
     <string name="about_t_storms">Bouřky</string>
     <string name="about_version">Verze:</string>
-    <string name="animation_preview">Náhled animací</string>
     <string name="applying_theme">Nastavování téma\u2026</string>
     <string name="app_name">Počasí</string>
     <string name="btn_add_location">Přidat</string>
@@ -37,19 +32,10 @@
     <string name="clear_miui_data_dialog_text">Databáze MIUI počasí byla vyčištěna!</string>
     <string name="clear_miui_data_summary">Vyčistí databázi MIUI počasí</string>
     <string name="close">Zavřít</string>
-    <string name="conf_add_widget">Přidat Widget</string>
-    <string name="conf_choose_skin">Nastavit vzhled</string>
-    <string name="conf_dark_skin">Tmavý vzhled</string>
-    <string name="conf_light_skin">Světlý vzhled</string>
-    <string name="conf_name">Nastavení Widgetu</string>
-    <string name="conf_no_background">Bez pozadí</string>
     <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_title">Formát data</string>
     <string name="dialog_color_picker">Výběr barvy</string>
-    <string name="dlg_go_to_forecast">Jít na předpověď</string>
-    <string name="dlg_select_action">Zvolte akci</string>
-    <string name="dlg_set_as_home">Nastavit jako \"Domácí město\"</string>
     <string name="donate">Příspěvek</string>
     <string name="donations_button_close">Zavřít</string>
     <string name="donations_description">"Je pro Vás tato aplikace užitečná? Podpořte nás malým příspěvkem!"</string>
@@ -67,56 +53,51 @@
     <string name="donations_thanks_dialog">"Děkujeme za příspěvek! Jsme Vám velmi vděční!"</string>
     <string name="donations_thanks_dialog_title">Děkujeme!</string>
     <string name="donations_yandex">Yandex.Money</string>
-    <string name="download_video">Stáhnout video</string>
     <string name="end_time_title">Konec</string>
     <string name="fetching_location">Získávání Vaší polohy...</string>
-    <string name="foreca_clear">Jasno</string>
-    <string name="foreca_cloudy">Oblačno</string>
-    <string name="foreca_cloudy_l_rain">Jemný déšť</string>
-    <string name="foreca_cloudy_l_snow">Jemný sníh</string>
-    <string name="foreca_cloudy_l_wet_snow">Jemný mokrý sníh</string>
-    <string name="foreca_cloudy_rain">Déšť</string>
-    <string name="foreca_cloudy_showers">Přeháňky</string>
-    <string name="foreca_cloudy_snow">Sníh</string>
-    <string name="foreca_cloudy_snow_showers">Sněhové přeháňky</string>
-    <string name="foreca_cloudy_ts_rain">Bouřka s deštěm</string>
-    <string name="foreca_cloudy_ts_snow">Bouřka se sněhem</string>
-    <string name="foreca_cloudy_ts_wet_snow">Bouřka s mokrým sněhem</string>
-    <string name="foreca_cloudy_wet_snow">Mokrý sníh</string>
-    <string name="foreca_cloudy_wet_snow_showers">Přeháňky s mokrým sněhem</string>
-    <string name="foreca_mostly_clear">Polojasno</string>
-    <string name="foreca_mostly_clear_pos_rain">Možnost deště</string>
-    <string name="foreca_mostly_clear_pos_snow">Možnost sněhu</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Možnost bouřky s deštěm</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Možnost bouřky se sněhem</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Možnost bouřky s mokrým sněhem</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Možnost mokrého sněhu</string>
-    <string name="foreca_overcast">Zataženo</string>
-    <string name="foreca_overcast_l_rain">Jemný déšť</string>
-    <string name="foreca_overcast_l_snow">Jemný sníh</string>
-    <string name="foreca_overcast_l_wet_snow">Jemný mokrý sníh</string>
-    <string name="foreca_overcast_rain">Déšť</string>
-    <string name="foreca_overcast_showers">Přeháňky</string>
-    <string name="foreca_overcast_snow">Sníh</string>
-    <string name="foreca_overcast_snow_showers">Sněhové přeháňky</string>
-    <string name="foreca_overcast_ts_rain">Bouřka s deštěm</string>
-    <string name="foreca_overcast_ts_snow">Bouřka se sněhem</string>
-    <string name="foreca_overcast_ts_wet_snow">Bouřka s mokrým sněhem</string>
-    <string name="foreca_overcast_wet_snow">Mokrý sníh</string>
-    <string name="foreca_overcast_wet_snow_showers">Přeháňky s mokrým sněhem</string>
-    <string name="foreca_partly_cloudy">Polojasno</string>
-    <string name="foreca_partly_cloudy_l_rain">Jemný déšť</string>
-    <string name="foreca_partly_cloudy_l_snow">Jemný sníh</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Jemný mokrý sníh</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Možnost bouřky s deštěm</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Možnost bouřky se sněhem</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Možnost bouřky s mokrým sněhem</string>
-    <string name="foreca_partly_cloudy_rain">Déšť</string>
-    <string name="foreca_partly_cloudy_showers">Přeháňky</string>
-    <string name="foreca_partly_cloudy_snow">sníh</string>
-    <string name="foreca_partly_cloudy_snow_showers">Sněhové přeháňky</string>
-    <string name="foreca_partly_cloudy_wet_snow">Mokrý sníh</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Přeháňky s mokrým sněhem</string>
+    <string name="forecast_chance_of_rain">Možnost deště</string>
+    <string name="forecast_chance_of_showers">Možnost přeháněk</string>
+    <string name="forecast_chance_of_snow">Možnost sněžení</string>
+    <string name="forecast_chance_of_snow_showers">Sněhové přeháňky</string>
+    <string name="forecast_chance_of_storm">Možnost bouřek</string>
+    <string name="forecast_chance_of_tstorm">Bouřka</string>
+    <string name="forecast_clear">Jasno</string>
+    <string name="forecast_cloudy">Zamračeno</string>
+    <string name="forecast_drizzle">Mrholení</string>
+    <string name="forecast_dust">Prašno</string>
+    <string name="forecast_fair">Hezky</string>
+    <string name="forecast_flurries">Lehké přeháňky</string>
+    <string name="forecast_fog">Mlha</string>
+    <string name="forecast_freezing_drizzle">Mrznoucí mrholení</string>
+    <string name="forecast_freezing_rain">Mrznoucí déšť</string>	
+    <string name="forecast_hail">Krupobití</string>
+    <string name="forecast_haze">Opar</string>
+    <string name="forecast_heavy_rain">Vydatný déšť</string>
+    <string name="forecast_icy">Námraza</string>
+    <string name="forecast_light_rain">Slabý déšť</string>
+    <string name="forecast_light_snow">Slabé sněžení</string>
+    <string name="forecast_mist">Mlžný opar</string>
+    <string name="forecast_mostly_cloudy">Převážne oblačno</string>
+    <string name="forecast_mostly_sunny">Převážně jasno</string>
+    <string name="forecast_overcast">Zataženo</string>
+    <string name="forecast_partly_cloudy">Polojasno</string>
+    <string name="forecast_partly_sunny">Částečně jasno</string>
+    <string name="forecast_rain">Déšť</string>
+    <string name="forecast_rain_and_snow">Déšť se sněhem</string>
+    <string name="forecast_rain_showers">Dešťové přeháňky</string>
+	<string name="forecast_sand">Písek</string>
+    <string name="forecast_scattered_showers">Ojedinělé přeháňky</string>
+    <string name="forecast_scattered_thunderstorms">Ojedinělé bouřky</string>
+    <string name="forecast_showers">Přeháňky</string>
+    <string name="forecast_sleet">Déšt se sněhem</string>
+    <string name="forecast_smoke">Kouř</string>
+    <string name="forecast_snow">Sníh</string>
+    <string name="forecast_snow_showers">Sněhové přeháňky</string>
+	<string name="forecast_snow_storm">Sněhová bouře</string>
+    <string name="forecast_sunny">Slunečno</string>
+    <string name="forecast_thunderstorm">Bouřka</string>
+    <string name="forecast_windy">Bouře</string>
+    <string name="forecast_snow_storm">Sněhová bouře</string>
     <string name="just_now">Právě teď</string>
     <string name="loading">Načítání...</string>
     <string name="location_edit">Vložte název Města</string>
@@ -128,7 +109,6 @@
     <string name="menu_delete_theme">Vymazat téma</string>
     <string name="menu_hourly">Hodinová</string>	
     <string name="menu_import">Importovat z SD karty</string>
-    <string name="menu_indices">Životní styl</string>
     <string name="menu_locations">Města</string>
     <string name="menu_moon_phases">Fáze měsíce</string>
     <string name="menu_settings">Nastavení</string>
@@ -162,13 +142,7 @@
     <string name="quiet_hours_enabled_on">Čas ticha povolen</string>
     <string name="quiet_hours_title">Čas ticha</string>
     <string name="save_screen_shot_failed">Ukládání screenshotu selhalo</string>
-    <string name="settings_about_summary">Informace o aplikaci</string>
     <string name="settings_about_title">O aplikaci</string>
-    <string name="settings_animation_download_summary">Stáhnout video animace pro aktuální předpověď počasí (pokud se nenašlo v telefonu)</string>
-    <string name="settings_animation_download_title">Stáhnout animace</string>
-    <string name="settings_animation_show_summary">Zobrazit animaci počasí pro aktuální podmínky</string>
-    <string name="settings_animation_show_title">Zobrazit animaci</string>
-    <string name="settings_animation_type">Typ animací</string>
     <string name="settings_category_animation">Nastavení animací</string>
     <string name="settings_category_animation_sum">Nastavení animací počasí a stahování dat</string>
     <string name="settings_category_appearance">Přizpůsobení</string>
@@ -188,8 +162,6 @@
     <string name="settings_check_updates_title">Kontrola aktualizací</string>
     <string name="settings_citydb_provider">Databáze měst</string>
     <string name="settings_click_actions">Přizpůsobení widgetu</string>
-    <string name="settings_hide_bottom_bar_summary">Dotkněte se displeje pro skrytí spodní lišty s tlačítky</string>
-    <string name="settings_hide_bottom_bar_title">Skrýt spodní lištu</string>
     <string name="settings_miui_support_summary">Povolte pro podporu widgetu počasí MIUI</string>
     <string name="settings_miui_support_title">MIUI widget</string>
     <string name="settings_miui_v5_summary">Povolte pokud používáte MIUI v5</string>
@@ -202,8 +174,6 @@
     <string name="settings_notification_type">Typ notifikací</string>
     <string name="settings_show_info_summary">Ukázat nebo skrýt Informace</string>
     <string name="settings_show_info_title">Ukázat info</string>
-    <string name="settings_show_weather_icons_summary">Zobrazit ikony počasí (místo textu) v 3-denní předpovědi</string>
-    <string name="settings_show_weather_icons_title">Zobrazit ikonu počasí</string>
     <string name="settings_time_format_12h">12h formát času</string>
     <string name="settings_update_autoupdate_summary">Automaticky aktualizovat předpověď počasí</string>
     <string name="settings_update_autoupdate_title">Automatická aktualizace</string>
@@ -267,22 +237,10 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" míle"</string>
-    <string name="weather_cond_chancerain">Možné srážky</string>
-    <string name="weather_cond_cloudy">Zamračeno</string>
-    <string name="weather_cond_fog">Mlha</string>
-    <string name="weather_cond_lightsnow">Lehké sněžení</string>
-    <string name="weather_cond_overcast">Zataženo</string>
-    <string name="weather_cond_rain">Déšť</string>
-    <string name="weather_cond_rainstorm">Bouřka</string>
-    <string name="weather_cond_sleet">Plískanice</string>
-    <string name="weather_cond_snow">Sníh</string>
-    <string name="weather_cond_sunny">Jasno</string>
-    <string name="weather_cond_t_storms">Bouřka</string>
     <string name="weather_feel">"Pocitově: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Vlhkost: "</string>
     <string name="weather_no_city">Žádné Město</string>
-    <string name="weather_no_conditions_data">Žádné údaje o počasí</string>
+    <string name="weather_no_data">Žádné údaje o počasí</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Tlak: "</string>
     <string name="weather_sunrize">"Východ: "</string>
