--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -8,7 +8,7 @@
     <string name="about_fog">Tåge</string>
     <string name="about_rainstorm">Regnstorm</string>
     <string name="about_t_storms">Torden</string>
-    <string name="about_rain_showers">Regnbyger</string>
+    <string name="about_rain_drizzle">Regnbyger</string>
     <string name="about_heavy_rain">Kraftig Regn</string>
     <string name="about_moderate_rain">Moderat Regn</string>
     <string name="about_light_rain">Let Regn</string>
@@ -58,53 +58,48 @@
     <string name="donations_thanks_dialog_title">Tak!</string>
     <string name="end_time_title">Slutningen</string>
     <string name="fetching_location">Lokaliserer\u2026</string>
-    <string name="foreca_clear">Klart</string>
-    <string name="foreca_cloudy">Skyet</string>
-    <string name="foreca_cloudy_l_rain">Let regn</string>
-    <string name="foreca_cloudy_l_snow">Let sne</string>
-    <string name="foreca_cloudy_l_wet_snow">Let slud</string>
-    <string name="foreca_cloudy_rain">Regn</string>
-    <string name="foreca_cloudy_showers">Regnbyger</string>
-    <string name="foreca_cloudy_snow">Sne</string>
-    <string name="foreca_cloudy_snow_showers">Snebyger</string>
-    <string name="foreca_cloudy_ts_rain">Torden med regn</string>
-    <string name="foreca_cloudy_ts_snow">Torden med sne</string>
-    <string name="foreca_cloudy_ts_wet_snow">Torden med slud</string>
-    <string name="foreca_cloudy_wet_snow">Slud</string>
-    <string name="foreca_cloudy_wet_snow_showers">Sludbyger</string>
-    <string name="foreca_mostly_clear">Overvejende klart</string>
-    <string name="foreca_mostly_clear_pos_rain">Risiko for regn</string>
-    <string name="foreca_mostly_clear_pos_snow">Risiko for sne</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Risiko for torden med regn</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Risiko for torden med sne</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Risiko for torden med slud</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Risiko for slud</string>
-    <string name="foreca_overcast">Overskyet</string>
-    <string name="foreca_overcast_l_rain">Let regn</string>
-    <string name="foreca_overcast_l_snow">Let sne</string>
-    <string name="foreca_overcast_l_wet_snow">Let slud</string>
-    <string name="foreca_overcast_rain">Regn</string>
-    <string name="foreca_overcast_showers">Regnbyger</string>
-    <string name="foreca_overcast_snow">Sne</string>
-    <string name="foreca_overcast_snow_showers">Snebyger</string>
-    <string name="foreca_overcast_ts_rain">Torden med regn</string>
-    <string name="foreca_overcast_ts_snow">Torden med sne</string>
-    <string name="foreca_overcast_ts_wet_snow">Torden med slud</string>
-    <string name="foreca_overcast_wet_snow">Slud</string>
-    <string name="foreca_overcast_wet_snow_showers">Sludbyger</string>
-    <string name="foreca_partly_cloudy">Delvist skyet</string>
-    <string name="foreca_partly_cloudy_l_rain">Let regn</string>
-    <string name="foreca_partly_cloudy_l_snow">Let sne</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Let slud</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Risiko for torden med regn</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Risiko for torden med sne</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Risiko for torden med slud</string>
-    <string name="foreca_partly_cloudy_rain">Regn</string>
-    <string name="foreca_partly_cloudy_showers">Regnbyger</string>
-    <string name="foreca_partly_cloudy_snow">Sne</string>
-    <string name="foreca_partly_cloudy_snow_showers">Snebyger</string>
-    <string name="foreca_partly_cloudy_wet_snow">Slud</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Byger med slud</string>
+    <string name="forecast_chance_of_rain">Risiko for regn</string>
+    <string name="forecast_chance_of_showers">Risiko for byger</string>
+    <string name="forecast_chance_of_snow">Risiko for sne</string>
+    <string name="forecast_chance_of_snow_showers">Risiko for snebyger</string>
+    <string name="forecast_chance_of_storm">Risiko for storm</string>
+    <string name="forecast_chance_of_tstorm">Tordenstorm</string>
+    <string name="forecast_clear">Klart</string>
+    <string name="forecast_cloudy">Skyet</string>
+    <string name="forecast_drizzle">Støvregn</string>
+    <string name="forecast_dust">Støv</string>
+    <string name="forecast_fair">Godt vejr</string>
+    <string name="forecast_flurries">Kastevinde</string>
+    <string name="forecast_fog">Tåge</string>
+    <string name="forecast_freezing_drizzle">Frysende støvregn</string>
+	<string name="forecast_freezing_rain">Isslag</string>
+    <string name="forecast_hail">Hagl</string>
+    <string name="forecast_haze">Dis</string>
+    <string name="forecast_heavy_rain">Kraftig regn</string>
+    <string name="forecast_icy">Iskoldt</string>
+    <string name="forecast_light_rain">Let regn</string>
+    <string name="forecast_light_snow">Let sne</string>
+    <string name="forecast_mist">Tåge</string>
+    <string name="forecast_mostly_cloudy">Overvejende skyet</string>
+    <string name="forecast_mostly_sunny">Overvejende solrigt</string>
+    <string name="forecast_overcast">Overskyet</string>
+    <string name="forecast_partly_cloudy">Delvist skyet</string>
+    <string name="forecast_partly_sunny">Delvist solrigt</string>
+    <string name="forecast_rain">Regn</string>
+    <string name="forecast_rain_and_snow">Regn og sne</string>
+    <string name="forecast_rain_showers">Regn</string>
+	<string name="forecast_sand">Sand</string>
+    <string name="forecast_scattered_showers">Spredte byger</string>
+    <string name="forecast_scattered_thunderstorms">Spredte tordenstorme</string>
+    <string name="forecast_showers">Byger</string>
+    <string name="forecast_sleet">Slud</string>
+    <string name="forecast_smoke">Røg</string>
+    <string name="forecast_snow">Sne</string>
+    <string name="forecast_snow_showers">Snebyger</string>
+	<string name="forecast_snow_storm">Snestorm</string>
+    <string name="forecast_sunny">Solrigt</string>
+    <string name="forecast_thunderstorm">Tordenstorm</string>
+    <string name="forecast_windy">Storm</string>
     <string name="changelog">Ændringslog</string>
     <string name="just_now">Lige nu</string>
     <string name="loading">Indlæser\u2026</string>
@@ -154,7 +149,6 @@
     <string name="quiet_hours_title">Stille timer</string>
     <string name="settings_about_title">Om</string>
     <string name="settings_category_animation">Animation</string>
-    <string name="settings_category_animation_sum">Animationstype, download politik</string>
     <string name="settings_category_app_update">Opdater app</string>
     <string name="settings_category_appearance">Udseende</string>
     <string name="settings_category_appearance_sum">Måleenheder, tekstfarve, etc.</string>
@@ -250,22 +244,10 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mil"</string>
-    <string name="weather_cond_cloudy">Skyet</string>
-    <string name="weather_cond_fog">Tåge</string>
-    <string name="weather_cond_chancerain">Risiko for regn</string>
-    <string name="weather_cond_lightsnow">Let sne</string>
-    <string name="weather_cond_overcast">Overskyet</string>
-    <string name="weather_cond_rain">Regn</string>
-    <string name="weather_cond_rainstorm">Regnstorm</string>
-    <string name="weather_cond_sleet">Slud</string>
-    <string name="weather_cond_snow">Sne</string>
-    <string name="weather_cond_sunny">Solrigt</string>
-    <string name="weather_cond_t_storms">Tordenvejr</string>
     <string name="weather_feel">"RealFeel: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Fugtighed: "</string>
     <string name="weather_no_city">Ingen by</string>
-    <string name="weather_no_conditions_data">Ingen vejrdata</string>
+    <string name="weather_no_data">Ingen vejrdata</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Tryk: "</string>
     <string name="weather_sunrize">"Solopgang: "</string>
