--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -3,7 +3,6 @@
     <string name="about_author">Author:</string>
     <string name="about_blizzard">Schneesturm</string>
     <string name="about_cloudy">Wolkig</string>
-    <string name="about_cloudy_night">Wolkige Nacht</string>
     <string name="about_dust">Smog</string>
     <string name="about_fog">Nebel</string>
     <string name="about_for_translators">Für Übersetzer:</string>
@@ -13,17 +12,13 @@
     <string name="about_light_rain">Nieselregen</string>
     <string name="about_light_snow">Leichter Schneefall</string>
     <string name="about_overcast">Bedeckt</string>
-    <string name="about_rain">Regen</string>
     <string name="about_rainstorm">Regensturm</string>
-    <string name="about_showers">Regenschauer</string>
+    <string name="about_rain_drizzle">Regenschauer</string>
     <string name="about_sleet">Graupelschauer</string>
-    <string name="about_snow">Schnee</string>
     <string name="about_social">Soziale Verbindungen:</string>
     <string name="about_sunny">Sonnig</string>
-    <string name="about_sunny_night">Klare Nacht</string>
     <string name="about_t_storms">Gewitter</string>
     <string name="about_version">Version:</string>
-    <string name="animation_preview">Animationsvorschau</string>
     <string name="app_name">Wetter BZ</string>
     <string name="btn_add_location">Ort hinzufügen</string>
     <string name="btn_delete_location">Ort löschen</string>
@@ -35,17 +30,8 @@
     <string name="clear_miui_data_dialog_text">MIUI-Wetteranbieter-Datenbank bereinigt!</string>
     <string name="clear_miui_data_summary">Bereinigt die MIUI-Wetteranbieter-Datenbank</string>
     <string name="close">Schließen</string>
-    <string name="conf_add_widget">Widget hinzufügen</string>
-    <string name="conf_choose_skin">Darstellung wählen</string>
-    <string name="conf_dark_skin">Dunkel</string>
-    <string name="conf_light_skin">Hell</string>
-    <string name="conf_name">Widget Einstellungen</string>
-    <string name="conf_no_background">Kein Hintergrund</string>
     <string name="date_format_title">Datumsformat</string>
-    <string name="dialog_color_picker">Farbwähler</string> 
-    <string name="dlg_go_to_forecast">Gehe zur Vorhersage</string>
-    <string name="dlg_select_action">Wähle eine Aktion</string>
-    <string name="dlg_set_as_home">Als \"Heimatstadt\" setzen</string>
+    <string name="dialog_color_picker">Farbwähler</string>
     <string name="donate">Spenden</string>
     <string name="donations_button_close">Schließen</string> 
     <string name="donations_description">Findest du diese App nützlich?\nUnterstütze die Entwicklung mit \"Flattr\" oder sende Spenden an den Entwickler!</string> 
@@ -62,57 +48,51 @@
     <string name="donations_paypal_item_name">In-App-Spende</string> 
     <string name="donations_thanks_dialog">Danke für die Spende!\nIch weiß das sehr zu schätzen!</string>    
     <string name="donations_thanks_dialog_title">Danke!</string> 
-    <string name="donations_yandex">Yandex.Money (RU)</string>  
-    <string name="download_video">Video abrufen</string>
+    <string name="donations_yandex">Yandex.Money (RU)</string>
     <string name="end_time_title">Ende</string>
     <string name="fetching_location">Ermittle deine Position\u2026</string>
-    <string name="foreca_clear">Klar</string>
-    <string name="foreca_cloudy">Wolkig</string>
-    <string name="foreca_cloudy_l_rain">Nieselregen</string>
-    <string name="foreca_cloudy_l_snow">Leichter Schneefall</string>
-    <string name="foreca_cloudy_l_wet_snow">Leichter Schneeregen</string>
-    <string name="foreca_cloudy_rain">Regen</string>
-    <string name="foreca_cloudy_showers">Schauer</string>
-    <string name="foreca_cloudy_snow">Schnee</string>
-    <string name="foreca_cloudy_snow_showers">Schneegestöber</string>
-    <string name="foreca_cloudy_ts_rain">Gewitter mit Regen</string>
-    <string name="foreca_cloudy_ts_snow">Gewitter mit Schnee</string>
-    <string name="foreca_cloudy_ts_wet_snow">Gewitter mit Schneeregen</string>
-    <string name="foreca_cloudy_wet_snow">Schneeregen</string>
-    <string name="foreca_cloudy_wet_snow_showers">Schneeregenschauer</string>
-    <string name="foreca_mostly_clear">Meist Klar</string>
-    <string name="foreca_mostly_clear_pos_rain">Regen möglich</string>
-    <string name="foreca_mostly_clear_pos_snow">Schnee möglich</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Gewitter mit Regen möglich</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Gewitter mit Schnee möglich</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Gewitter mit Schneeregen möglich</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Schneeregen möglich</string>
-    <string name="foreca_overcast">Bedeckt</string>
-    <string name="foreca_overcast_l_rain">Nieselregen</string>
-    <string name="foreca_overcast_l_snow">Leichter Schneefall</string>
-    <string name="foreca_overcast_l_wet_snow">Leichter Schneeregen</string>
-    <string name="foreca_overcast_rain">Regen</string>
-    <string name="foreca_overcast_showers">Schauer</string>
-    <string name="foreca_overcast_snow">Schnee</string>
-    <string name="foreca_overcast_snow_showers">Schneegestöber</string>
-    <string name="foreca_overcast_ts_rain">Gewitter mit Regen</string>
-    <string name="foreca_overcast_ts_snow">Gewitter mit Schnee</string>
-    <string name="foreca_overcast_ts_wet_snow">Gewitter mit Schneeregen</string>
-    <string name="foreca_overcast_wet_snow">Schneeregen</string>
-    <string name="foreca_overcast_wet_snow_showers">Schneeregenschauer</string>
-    <string name="foreca_partly_cloudy">Teilweise wolkig</string>
-    <string name="foreca_partly_cloudy_l_rain">Nieselregen</string>
-    <string name="foreca_partly_cloudy_l_snow">Leichter Schneefall</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Leichter Schneeregen</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Gewitter mit Regen möglich</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Gewitter mit Schnee möglich</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Gewitter mit Schneeregen möglich</string>
-    <string name="foreca_partly_cloudy_rain">Regen</string>
-    <string name="foreca_partly_cloudy_showers">Schauer</string>
-    <string name="foreca_partly_cloudy_snow">Schnee</string>
-    <string name="foreca_partly_cloudy_snow_showers">Schneegestöber</string>
-    <string name="foreca_partly_cloudy_wet_snow">Schneeregen</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Schneeregenschauer</string>
+    <string name="forecast_chance_of_rain">Regen</string>
+    <string name="forecast_chance_of_showers">Regenfälle</string>
+    <string name="forecast_chance_of_snow">Schnee</string>
+    <string name="forecast_chance_of_snow_showers">Schneeschauer</string>
+    <string name="forecast_chance_of_storm">Sturm</string>
+    <string name="forecast_chance_of_tstorm">Gewitter</string>
+    <string name="forecast_clear">Klar</string>
+    <string name="forecast_cloudy">Wolkig</string>
+    <string name="forecast_drizzle">Nieselregen</string>
+    <string name="forecast_dust">Staub</string>
+    <string name="forecast_fair">Heiter</string>
+    <string name="forecast_flurries">Böen</string>
+    <string name="forecast_fog">Nebel</string>
+    <string name="forecast_freezing_drizzle">Gefrierender Niesel</string>
+	<string name="forecast_freezing_rain">Gefrierender Regen</string>
+    <string name="forecast_hail">Hagel</string>
+    <string name="forecast_haze">Nebel</string>
+    <string name="forecast_heavy_rain">Starker Regen</string>
+    <string name="forecast_icy">Eisig</string>
+    <string name="forecast_light_rain">Leichter Regen</string>
+    <string name="forecast_light_snow">Leichter Schnee</string>
+    <string name="forecast_mist">Sprühregen</string>
+    <string name="forecast_mostly_cloudy">Meistens Bewölkt</string>
+    <string name="forecast_mostly_sunny">Meistens Sonnig</string>
+    <string name="forecast_overcast">Bedeckt</string>
+    <string name="forecast_partly_cloudy">Teils Bewölkt</string>
+    <string name="forecast_partly_sunny">Teils Sonnig</string>
+    <string name="forecast_rain">Regen</string>
+    <string name="forecast_rain_and_snow">Regen und Schnee</string>
+    <string name="forecast_rain_showers">Regenfälle</string>
+	<string name="forecast_sand">Sand</string>
+    <string name="forecast_scattered_showers">Auflockernde Regenfälle</string>
+    <string name="forecast_scattered_thunderstorms">Auflockerndes Gewitter</string>
+    <string name="forecast_showers">Regenfälle</string>
+    <string name="forecast_sleet">Schneeregen</string>
+    <string name="forecast_smoke">Rauch</string>
+    <string name="forecast_snow">Schnee</string>
+    <string name="forecast_snow_showers">Schneeschauer</string>
+	<string name="forecast_snow_storm">Schneesturm</string>
+    <string name="forecast_sunny">Sonnig</string>
+    <string name="forecast_thunderstorm">Gewitter</string>
+    <string name="forecast_windy">Sturm</string>
     <string name="just_now">Gerade eben</string>
     <string name="loading">Lade\u2026</string> 
     <string name="location_edit">Name der Stadt</string>
@@ -122,7 +102,6 @@
     <string name="main_screen_text_color_summary">Textfarbe der wichtigsten Daten auf der Anzeige</string> 
     <string name="menu">Menü</string>
     <string name="menu_hourly">Stündlich</string>
-    <string name="menu_indices">Lifestyle</string>
     <string name="menu_locations">Orte</string>
     <string name="menu_moon_phases">Mondphasen</string>
     <string name="menu_settings">Einstellungen</string>
@@ -155,15 +134,9 @@
     <string name="quiet_hours_enabled_on">Ruhestunden aktiviert</string>
     <string name="quiet_hours_title">Ruhestunden</string>
     <string name="save_screen_shot_failed">Screenshot konnte nicht gesichert werden</string>
-    <string name="settings_about_summary">Informationen über die App</string>
     <string name="settings_about_title">Über</string>
-    <string name="settings_animation_download_summary">Animationen und Videodaten für aktuelle Wetterbedingungen herunterladen (wenn Video lokal nicht auffindbar)</string>
-    <string name="settings_animation_download_title">Animationen herunterladen</string>
-    <string name="settings_animation_show_summary">Zeige Wetter-Animation für aktuelle Bedingungen</string>
-    <string name="settings_animation_show_title">Zeige Animation</string>
-    <string name="settings_animation_type">Art der Animation</string>
     <string name="settings_category_animation">Animationen</string>
-    <string name="settings_category_animation_sum">Animationsart, Download-Regeln</string>
+    <string name="settings_category_animation_sum">Animationsart</string>
     <string name="settings_category_app_update">Anwendungsupdate</string>
     <string name="settings_category_appearance">Allgemein</string>
     <string name="settings_category_appearance_sum">Einheiten, Textfarbe etc.</string>
@@ -180,8 +153,6 @@
     <string name="settings_check_updates_summary">Prüfe auf Aktualisierung beim Anwendungsstart</string>    
     <string name="settings_check_updates_title">Prüfe auf Aktualisierung</string>
     <string name="settings_click_actions">Berührungseinstellungen</string>
-    <string name="settings_hide_bottom_bar_summary">Bildschirm berühren um den Balken mit den Knöpfen zu verbergen</string>
-    <string name="settings_hide_bottom_bar_title">Unteren Balken verbergen</string>
     <string name="settings_miui_support_summary">Einschalten um native MIUI-Widgets zu unterstützen</string>
     <string name="settings_miui_support_title">MIUI-Widget-Unterstützung</string>
     <string name="settings_miui_v5_summary">Einschalten wenn du ein MIUI v5 ROM verwendest</string>
@@ -194,8 +165,6 @@
     <string name="settings_notification_type">Art der Benachrichtigung</string>
     <string name="settings_show_info_summary">Zeige oder verstecke Anzeigeelemente</string>
     <string name="settings_show_info_title">Zeige Information</string>
-    <string name="settings_show_weather_icons_summary">Zeige Wettersymbole (anstelle der Wetterbeschreibung) in der 3-Tage-Vorhersage</string>
-    <string name="settings_show_weather_icons_title">Zeige Wettersymbole</string>
     <string name="settings_time_format_12h">12h Zeitformat</string>
     <string name="settings_update_autoupdate_summary">Automatische Aktualisierung der Vorhersage</string>
     <string name="settings_update_autoupdate_title">Automatische Aktualisierung</string>
@@ -249,22 +218,10 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mi"</string>
-    <string name="weather_cond_chancerain">Regen möglich</string>
-    <string name="weather_cond_cloudy">Wolkig</string>
-    <string name="weather_cond_fog">Nebel</string>
-    <string name="weather_cond_lightsnow">Leichter Schneefall</string>
-    <string name="weather_cond_overcast">Bedeckt</string>
-    <string name="weather_cond_rain">Regen</string>
-    <string name="weather_cond_rainstorm">Regensturm</string>
-    <string name="weather_cond_sleet">Graupelschauer</string>
-    <string name="weather_cond_snow">Schnee</string>
-    <string name="weather_cond_sunny">Sonnig</string>
-    <string name="weather_cond_t_storms">Gewitter</string>
     <string name="weather_feel">"Gefühlt: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Luftfeuchtigkeit: "</string>
     <string name="weather_no_city">Keine Stadt</string>
-    <string name="weather_no_conditions_data">Keine Wetterdaten</string>
+    <string name="weather_no_data">Keine Wetterdaten</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Luftdruck: "</string>
     <string name="weather_sunrize">"Sonnenaufgang: "</string>
