--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -3,7 +3,6 @@
     <string name="about_author">Συντάκτης:</string>
     <string name="about_blizzard">Blizzard</string>
     <string name="about_cloudy">Συννεφιά</string>
-    <string name="about_cloudy_night">Συννεφιασμένη νύχτα</string>
     <string name="about_dust">Σκόνη</string>
     <string name="about_fog">Ομίχλη</string>
     <string name="about_for_translators">Για μεταφραστές:</string>
@@ -13,17 +12,13 @@
     <string name="about_light_rain">Ψιλόβροχο</string>
     <string name="about_light_snow">Χιονόπτωση</string>
     <string name="about_overcast">Nεφελώδης</string>
-    <string name="about_rain">Βροχή</string>
     <string name="about_rainstorm">Καταιγίδα</string>
-    <string name="about_showers">Ψιχάλες</string>
+    <string name="about_rain_drizzle">Ψιχάλες</string>
     <string name="about_sleet">Χιονόνερο</string>
-    <string name="about_snow">Χιόνι</string>
     <string name="about_social">Social links:</string>
     <string name="about_sunny">Λιακάδα</string>
-    <string name="about_sunny_night">Καθαρή βραδυά</string>
     <string name="about_t_storms">Καταιγίδες</string>
     <string name="about_version">Έκδοση:</string>
-    <string name="animation_preview">Κινηση προβολής</string>
     <string name="app_name">Weather BZ</string>
     <string name="btn_add_location">Προσθ. τοποθεσίας</string>
     <string name="btn_delete_location">Διαγραφή τοποθεσίας</string>
@@ -34,19 +29,10 @@
     <string name="clear_miui_data_dialog_text">Δεδομένα καιρού παροχέα MIUI διαγράφηκαν!</string>
     <string name="clear_miui_data_summary">Διαγράφει τα δεδομένα του παροχέα καιρού MIUI</string>
     <string name="close">Κλείσιμο</string>
-    <string name="conf_add_widget">προσθ. Widget</string>
-    <string name="conf_dark_skin">Σκούρο Skin</string>
-    <string name="conf_choose_skin">Επιλογή Skin</string>
-    <string name="conf_light_skin">Ανοιχτό Skin</string>
-    <string name="conf_name">Ρυθμίσεις Widget</string>
-    <string name="conf_no_background">Χωρίς φόντο</string>
     <string name="date_format_title">Μορφή Ημερομηνίας</string>
     <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="dialog_color_picker">Επιλογή Χρώματος</string>
-    <string name="dlg_go_to_forecast">Πρός Πρόβλεψη</string>
-    <string name="dlg_select_action">Επιλογή Ενέργειας</string>
-    <string name="dlg_set_as_home">Ορισε ως \"Home City\"</string>
     <string name="donate">Δωρεά</string>
     <string name="donations_button_close">Κλείσιμο</string>
     <string name="donations_description">Βρισκεις χρήσιμη την εφαρμογή?\nΥποστίριξε\'s από flattring είτε στέλνοντας δωρεές προς τον κύριο του έργου!</string>
@@ -64,56 +50,50 @@
     <string name="donations_paypal_item_name">Μεσα στην εφαρμογή δωρεά</string>
     <string name="donations_thanks_dialog">Ευχαριστώ για την δωρεά!\nI rτο εκτιμώ!</string>
     <string name="donations_thanks_dialog_title">Ευχαριστούμε!</string>
-    <string name="download_video">Πάρε video</string>
     <string name="end_time_title">Τέλος</string>
     <string name="fetching_location">Ορίζεται η θέση σας\u2026</string>
-    <string name="foreca_clear">Αίθριος</string>
-    <string name="foreca_cloudy">Συννεφιά</string>
-    <string name="foreca_cloudy_l_rain">Λίγη Βροχή</string>
-    <string name="foreca_cloudy_l_snow">Λίγο Χιόνι</string>
-    <string name="foreca_cloudy_l_wet_snow">Λίγο Χιονόνερο</string>
-    <string name="foreca_cloudy_rain">Βροχή</string>
-    <string name="foreca_cloudy_showers">Μπόρες</string>
-    <string name="foreca_cloudy_snow">Χιόνι</string>
-    <string name="foreca_cloudy_snow_showers">Μπόρες Χιονιού</string>
-    <string name="foreca_cloudy_ts_rain">Καταιγίδες με Βροχή</string>
-    <string name="foreca_cloudy_ts_snow">Καταιγίδες με χιόνι</string>
-    <string name="foreca_cloudy_ts_wet_snow">Καταιγίδες με χιονόνερο</string>
-    <string name="foreca_cloudy_wet_snow">Χιονόνερο</string>
-    <string name="foreca_cloudy_wet_snow_showers">Μπόρες με Χιονόνερο</string>
-    <string name="foreca_mostly_clear">Κυρίως αίθριος</string>
-    <string name="foreca_mostly_clear_pos_rain">Πιθανότητα βροχής</string>
-    <string name="foreca_mostly_clear_pos_snow">Πιθανότητα χιονιού</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Πιθανότητα καταιγίδας με βροχή</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Πιθανότητα καταιγίδας με χιόνι</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Πιθανότητα τυφώνα με χαλάζι</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Πιθανότητα χαλάζιου</string>
-    <string name="foreca_overcast">Νεφελώδης</string>
-    <string name="foreca_overcast_l_rain">Ψιλόβροχο</string>
-    <string name="foreca_overcast_l_snow">Λίγο χιόνι</string>
-    <string name="foreca_overcast_l_wet_snow">Ελαφρύ χιονόνερο</string>
-    <string name="foreca_overcast_rain">Βροχή</string>
-    <string name="foreca_overcast_showers">Μπόρες</string>
-    <string name="foreca_overcast_snow">Χιόνι</string>
-    <string name="foreca_overcast_snow_showers">Εμφάνιση μπορας</string>
-    <string name="foreca_overcast_ts_rain">Θύελλα με βροχή</string>
-    <string name="foreca_overcast_ts_snow">Θύελλα με χιόνι</string>
-    <string name="foreca_overcast_ts_wet_snow">Θύελλα με χιονόνερο</string>
-    <string name="foreca_overcast_wet_snow">Χιονόνερο</string>
-    <string name="foreca_overcast_wet_snow_showers">Μπορες με χιονόνερο</string>
-    <string name="foreca_partly_cloudy">Πυκνή συννεφιά</string>
-    <string name="foreca_partly_cloudy_l_rain">Ψιλόβροχο</string>
-    <string name="foreca_partly_cloudy_l_snow">Λίγο χιόνι</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Ελαφρύ χιονόνερο</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Πιθανότητα θύελλας με βροχή</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Πιθανότητα θύελλας με χιόνι</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Πιθανότητα θύελλας με χιονόνερο</string>
-    <string name="foreca_partly_cloudy_rain">Βροχή</string>
-    <string name="foreca_partly_cloudy_showers">Μπόρες</string>
-    <string name="foreca_partly_cloudy_snow">Χιόνι</string>
-    <string name="foreca_partly_cloudy_snow_showers">Μπόρες με χιόνι</string>
-    <string name="foreca_partly_cloudy_wet_snow">Χιονόνερο</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Μπόρες με χιονόνερο</string>
+    <string name="forecast_chance_of_rain">Πιθανή Βροχόπτωση</string>
+    <string name="forecast_chance_of_showers">Πιθανή Καταιγίδα</string>
+    <string name="forecast_chance_of_snow">Πιθανή Χιονόπτωση</string>
+    <string name="forecast_chance_of_snow_showers">Πιθανή Χιονόπτωση</string>
+    <string name="forecast_chance_of_storm">Πιθανή Καταιγίδα</string>
+    <string name="forecast_chance_of_tstorm">Ισχυρή Καταιγίδα</string>
+    <string name="forecast_clear">Καθαρός Ουρανός</string>
+    <string name="forecast_cloudy">Συννεφιά</string>
+    <string name="forecast_drizzle">Ψιλόβροχο</string>
+    <string name="forecast_dust">Σκόνη</string>
+    <string name="forecast_fair">Αίθριος</string>
+    <string name="forecast_flurries">Ελαφρά Χιονόπτωση</string>
+    <string name="forecast_fog">Ομίχλη</string>
+    <string name="forecast_freezing_drizzle">Παγωμένο Ψιλόβροχο</string>
+	<string name="forecast_freezing_rain">Παγωμένη Βροχή</string>
+    <string name="forecast_hail">Χαλάζι</string>
+    <string name="forecast_haze">Καταχνιά</string>
+    <string name="forecast_heavy_rain">Ισχυρή Βροχόπτωση</string>
+    <string name="forecast_icy">Παγωνιά</string>
+    <string name="forecast_light_rain">Ασθενής Βροχόπτωση</string>
+    <string name="forecast_light_snow">Ασθενής Χιονόπτωση</string>
+    <string name="forecast_mist">Καταχνιά</string>
+    <string name="forecast_mostly_cloudy">Αρκετή Συννεφιά</string>
+    <string name="forecast_mostly_sunny">Ήλιος με δόντια</string>
+    <string name="forecast_overcast">Νεφοσκεπής</string>
+    <string name="forecast_partly_cloudy">Αραιή Συννεφιά</string>
+    <string name="forecast_partly_sunny">Αραιή Λιακάδα</string>
+    <string name="forecast_rain">Βροχή</string>
+    <string name="forecast_rain_and_snow">Βροχή και Χιόνι</string>
+    <string name="forecast_rain_showers">Νεροποντές</string>
+	<string name="forecast_sand">Άμμος</string>
+    <string name="forecast_scattered_showers">Διάσπαρτες Καταιγίδες</string>
+    <string name="forecast_scattered_thunderstorms">Διάσπαρτες Καταιγίδες</string>
+    <string name="forecast_showers">Καταιγίδες</string>
+    <string name="forecast_sleet">Χιονόνερο</string>
+    <string name="forecast_smoke">Καπνώδης</string>
+    <string name="forecast_snow">Χιόνια</string>
+    <string name="forecast_snow_showers">Χιονοπτώσεις</string>
+	<string name="forecast_snow_storm">Θύελλα χιονιού</string>
+    <string name="forecast_sunny">Ηλιοφάνεια</string>
+    <string name="forecast_thunderstorm">Καταιγίδα</string>
+    <string name="forecast_windy">Καταιγίδα</string>  
     <string name="changelog">Αλλαγές</string>
     <string name="just_now">Τώρα</string>
     <string name="loading">Loading\u2026</string>
@@ -141,13 +121,7 @@
     <string name="quiet_hours_enabled_off">Οι ενημερώσεις θα γινονται κανονικά</string>
     <string name="quiet_hours_enabled_on">Ενεργές νεκρές ώρες</string>
     <string name="quiet_hours_title">Νεκρές ώρες</string>
-    <string name="settings_about_summary">Πληροφορίες για την εφαρμογή</string>
     <string name="settings_about_title">Σχετικά</string>
-    <string name="settings_animation_download_summary">κατεβάστε κινούμενα βίντεο για την τρεχουσα κατάσταση καιρού(αν δεν υπαρχει βίντεο τοπικά αποθηκευμένο)</string>
-    <string name="settings_animation_download_title">Κατεβάστε animations</string>
-    <string name="settings_animation_show_summary">Εμφάνιση animation καιρού για τρέχουσες συνθήκες</string>
-    <string name="settings_animation_show_title">Εμφάνιση animation</string>
-    <string name="settings_animation_type">Τύπος Animation</string>
     <string name="settings_category_animation">Animation</string>
     <string name="settings_category_animation_sum">Τύπος Animation, πολιτική κατεβάσματος</string>
     <string name="settings_category_app_update">Ενημέρωση εφαρμογής</string>
@@ -177,8 +151,6 @@
     <string name="settings_notification_type">Τύπος ειδοποίησης</string>
     <string name="settings_show_info_summary">Εμφάνιση/απόκρυψη στοιχείων διασύνδεσης</string>
     <string name="settings_show_info_title">Εμφάνιση πληροφοριών</string>
-    <string name="settings_show_weather_icons_summary">εμφανίζει τα εικονίδια καιρού (αντί του κειμένου περιγραφής καιρικές συνθήκες) στην πρόγνωση 3 ημερών</string>
-    <string name="settings_show_weather_icons_title">Εμφάνιση εικονιδίου καιρού</string>
     <string name="settings_time_format_12h">12h μορφή της ώρας</string>
     <string name="settings_update_autoupdate_summary">Αυτόματη πρόγνωση καιρού ενημέρωση</string>
     <string name="settings_update_autoupdate_title">Αυτόματη ενημέρωση</string>
@@ -232,22 +204,10 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" μίλια"</string>
-    <string name="weather_cond_cloudy">Συννεφιά</string>
-    <string name="weather_cond_fog">Ομίχλη</string>
-    <string name="weather_cond_chancerain">Πιθανότητα βροχής</string>
-    <string name="weather_cond_lightsnow">Λίγο χιόνι</string>
-    <string name="weather_cond_overcast">Νεφελώδης</string>
-    <string name="weather_cond_rain">Βροχή</string>
-    <string name="weather_cond_rainstorm">Καταιγίδα</string>
-    <string name="weather_cond_sleet">Χιονόνερο</string>
-    <string name="weather_cond_snow">Χιόνι</string>
-    <string name="weather_cond_sunny">Λιακάδα</string>
-    <string name="weather_cond_t_storms">Θύελλες</string>
     <string name="weather_feel">"Πραγμ αισθηση: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Υγρασία: "</string>
     <string name="weather_no_city">Καμία πόλη</string>
-    <string name="weather_no_conditions_data">Χωρίς δεδομένα καιρού</string>
+    <string name="weather_no_data">Χωρίς δεδομένα καιρού</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Πίεση: "</string>
     <string name="weather_sunrize">"Ανατολή: "</string>
