--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 	<string name="about_author">"Auteur:"</string>
 	<string name="about_blizzard">Tempête de neige</string>
-	<string name="about_cloudy_night">Nuit nuageuse</string>
 	<string name="about_cloudy">Nuageux</string>
 	<string name="about_dust">Tempête de poussière</string>
 	<string name="about_fog">Brouillard</string>
@@ -13,17 +12,13 @@
 	<string name="about_light_rain">Pluie fine</string>
 	<string name="about_light_snow">Neige légère</string>
 	<string name="about_overcast">Nuages épars</string>
-	<string name="about_rain">Pluie</string>
 	<string name="about_rainstorm">Pluie torrentielle</string>
-	<string name="about_showers">Averse</string>
+	<string name="about_rain_drizzle">Averse</string>
 	<string name="about_sleet">Grésil</string>
-	<string name="about_snow">Neige</string>
 	<string name="about_social">"Liens:"</string>
-	<string name="about_sunny_night">Nuit dégagée</string>
 	<string name="about_sunny">Ciel dégagé</string>
 	<string name="about_t_storms">Orage</string>
 	<string name="about_version">"Version:"</string>
-	<string name="animation_preview">Prévisualisation</string>
 	<string name="app_name">Météo</string>
 	<string name="btn_add_location">Ajouter</string>
 	<string name="btn_delete_location">Supprimer</string>
@@ -35,18 +30,8 @@
 	<string name="clear_miui_data_summary">"Effacer les données de l'application météo native de MIUI"</string>
 	<string name="clear_miui_data">Vider le cache météo</string>
 	<string name="close">Fermer</string>
-	<string name="conf_add_widget">Ajouter un widget</string>
-	<string name="conf_choose_skin">Choisir un thème</string>
-	<string name="conf_dark_skin">Thème foncé (dark)</string>
-	<string name="conf_light_skin">Thème clair (light)</string>
-	<string name="conf_name">Widgets</string>
-	<string name="conf_no_background">Aucun arrière-plan</string>
 	<string name="dialog_color_picker">Choix de la couleur</string>
-	<string name="dlg_go_to_forecast">Consulter les prévisions météorologiques</string>
-	<string name="dlg_select_action">Que souhaitez-vous faire ?</string>
-	<string name="dlg_set_as_home">Définir en tant que ville principale</string>
 	<string name="donate">Faire un don</string>
-	<string name="donations__paypal_item_name">InApp Donation</string>
 	<string name="donations_button_close">Fermer</string>
 	<string name="donations_description">"Vous trouvez cette application utile ?
 Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via l'Android Market."</string>
@@ -58,17 +43,55 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="donations_google_android_market_not_supported">"Donations In-App non-supportée. L'application Google Play Store est-elle correctement installée ?"</string>
 	<string name="donations_google_android_market_text">Combien ?</string>
 	<string name="donations_google_android_market">Google Play Store</string>
-	<string name="donations_paypal_currency_code">USD</string>
 	<string name="donations_paypal_description">Vous pouvez faire un don du montant désiré en cliquant sur le bouton ci-dessous.</string>
 	<string name="donations_paypal_item_name">InApp Donation</string>
-	<string name="donations_paypal_user">az.burgerz@gmail.com</string>
 	<string name="donations_paypal">PayPal</string>
 	<string name="donations_thanks_dialog_title">Merci !</string>
 	<string name="donations_thanks_dialog">Merci beaucoup pour votre don !</string>
-	<string name="download_video">Télécharger la vidéo</string>
 	<string name="end_time_title">Fin</string>
 	<string name="fetching_location">Géolocalisation…</string>
-	<string name="ga_trackingId">UA-38673998-1</string>
+	<string name="forecast_chance_of_rain">Risque de pluie</string>
+    <string name="forecast_chance_of_showers">"Risque d'averses"</string>
+    <string name="forecast_chance_of_snow">Risque de neige</string>
+    <string name="forecast_chance_of_snow_showers">Averses de neige</string>
+    <string name="forecast_chance_of_storm">Risque de tempête</string>
+    <string name="forecast_chance_of_tstorm">"Risque d'orages"</string>
+    <string name="forecast_clear">Clair</string>
+    <string name="forecast_cloudy">Nuageux</string>
+    <string name="forecast_drizzle">Bruine</string>
+    <string name="forecast_dust">Poussière</string>
+    <string name="forecast_fair">Beau temps</string>
+    <string name="forecast_flurries">Averses de neige</string>
+    <string name="forecast_fog">Brouillard</string>
+    <string name="forecast_freezing_drizzle">Bruine verglaçante</string>
+	<string name="forecast_freezing_rain">Pluie verglaçante</string>
+    <string name="forecast_hail">Grêle</string>
+    <string name="forecast_haze">Brume</string>
+    <string name="forecast_heavy_rain">Pluie battante</string>
+    <string name="forecast_icy">Glacial</string>
+    <string name="forecast_light_rain">Pluie légère</string>
+    <string name="forecast_light_snow">Neige légère</string>
+    <string name="forecast_mist">Brouillard</string>
+    <string name="forecast_mostly_cloudy">Quelques éclaircies</string>
+    <string name="forecast_mostly_sunny">Assez ensoleillé</string>
+    <string name="forecast_overcast">Couvert</string>
+    <string name="forecast_partly_cloudy">Partiellement nuageux</string>
+    <string name="forecast_partly_sunny">Partiellement ensoleillé</string>
+    <string name="forecast_rain">Pluie</string>
+    <string name="forecast_rain_and_snow">Pluie et neige</string>
+    <string name="forecast_rain_showers">Averses de pluie</string>
+	<string name="forecast_sand">Sable</string>
+    <string name="forecast_scattered_showers">Averses éparses</string>
+    <string name="forecast_scattered_thunderstorms">Orages épars</string>
+    <string name="forecast_showers">Averses</string>
+    <string name="forecast_sleet">Neige fondue</string>
+    <string name="forecast_smoke">Fumée</string>
+    <string name="forecast_snow">Neige</string>
+    <string name="forecast_snow_showers">Averses de neige</string>
+	<string name="forecast_snow_storm">Tempête de neige</string>
+    <string name="forecast_sunny">Ensoleillé</string>
+    <string name="forecast_thunderstorm">Orage</string>
+    <string name="forecast_windy">Tempête</string>
 	<string name="just_now">"A l'instant"</string>
 	<string name="loading">Chargement…</string>
 	<string name="location_edit">Nom de la ville</string>
@@ -94,13 +117,7 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="quiet_hours_enabled_on">Mises à jour désactivées sur la plage horaire définie ci-dessous</string>
 	<string name="quiet_hours_enabled">Désactiver les mises à jour</string>
 	<string name="quiet_hours_title">Plages horaires des mises à jour</string>
-	<string name="settings_about_summary"></string>
 	<string name="settings_about_title">À propos</string>
-	<string name="settings_animation_download_summary">Télécharger une animation correspondant à la météo actuelle (si aucun fichier vidéo en local ne correspond)</string>
-	<string name="settings_animation_download_title">Télécharger des animations</string>
-	<string name="settings_animation_show_summary">Afficher en arrière-plan une animation correspondant à la météo actuelle</string>
-	<string name="settings_animation_show_title">Afficher les animations</string>
-	<string name="settings_animation_type">"Type d'animation"</string>
 	<string name="settings_category_animation_sum"></string>
 	<string name="settings_category_animation">Animations</string>
 	<string name="settings_category_app_update">Application</string>
@@ -130,8 +147,6 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="settings_notification_type">Type de notification</string>
 	<string name="settings_show_info_summary">Sélectionner les informations à afficher</string>
 	<string name="settings_show_info_title">Informations à afficher</string>
-	<string name="settings_show_weather_icons_summary">Afficher des icônes dans les prévisions météorologiques à 3 jours</string>
-	<string name="settings_show_weather_icons_title">Affichage des icônes de météo</string>
 	<string name="settings_time_format_12h">Heure au format 12h</string>
 	<string name="settings_update_autoupdate_summary">Mettre à jour automatiquement les prévisions météorologiques</string>
 	<string name="settings_update_autoupdate_title">Mettre à jour automatiquement</string>
@@ -176,22 +191,10 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="visibility_units_m">" m"</string>
 	<string name="visibility_units_mi">" miles"</string>
 	<string name="visibility_units">Unité de visibilité</string>
-	<string name="weather_cond_chancerain">Pluie probable</string>
-	<string name="weather_cond_cloudy">Nuageux</string>
-	<string name="weather_cond_fog">Brouillard</string>
-	<string name="weather_cond_lightsnow">Neige légère</string>
-	<string name="weather_cond_overcast">Nuages épars</string>
-	<string name="weather_cond_rain">Pluie</string>
-	<string name="weather_cond_rainstorm">Pluie torrentielle</string>
-	<string name="weather_cond_sleet">Grésil</string>
-	<string name="weather_cond_snow">Neige</string>
-	<string name="weather_cond_sunny">Ciel dégagé</string>
-	<string name="weather_cond_t_storms">Orage</string>
 	<string name="weather_feel">"Ressenti : "</string>
-	<string name="weather_forecast_empty">--</string>
 	<string name="weather_humidity">"Humidité : "</string>
 	<string name="weather_no_city">Aucune ville</string>
-	<string name="weather_no_conditions_data">Aucune donnée météo</string>
+	<string name="weather_no_data">Aucune donnée météo</string>
 	<string name="weather_no_temp_data">-°</string>
 	<string name="weather_pressure">"Pression : "</string>
 	<string name="weather_sunrize">"Lever : "</string>
