--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -14,17 +14,13 @@
     <string name="about_light_rain">Könnyű eső</string>
     <string name="about_light_snow">Hószállingázás</string>
     <string name="about_overcast">Borult</string>
-    <string name="about_rain">Eső</string>
     <string name="about_rainstorm">Felhőszakadás</string>
-    <string name="about_showers">Záporok</string>
+    <string name="about_rain_drizzle">Záporok</string>
     <string name="about_sleet">Ónos eső</string>
-    <string name="about_snow">Hó</string>
     <string name="about_social">Kapcsolatfelvétel:</string>
-    <string name="about_sunny_night">Tiszta</string>
     <string name="about_sunny">Napos</string>
     <string name="about_t_storms">Zivatarok</string>
     <string name="about_version">Verzió:</string>
-    <string name="animation_preview">Animációk előnézete</string>
     <string name="app_name">Időjárás</string>
     <string name="applying_theme">Táma alkalmazása\u2026</string>
     <string name="btn_add_location">Új helyszín</string>
@@ -38,17 +34,8 @@
     <string name="clear_miui_data_summary">MIUI időjárás szolgáltató adatbázisának törlése</string>
     <string name="clear_miui_data">MIUI időjárásadatok törlése</string>
     <string name="close">Bezárás</string>
-    <string name="conf_add_widget">Widget hozzáadás</string>
-    <string name="conf_choose_skin">Válasszon felületet</string> 
-    <string name="conf_dark_skin">Sötét felület</string>
-    <string name="conf_light_skin">Világos felület</string>
-    <string name="conf_name">Widget beállítások</string>   
-    <string name="conf_no_background">Nincs háttér</string>
     <string name="date_format_title">Dátum formátum</string>
     <string name="dialog_color_picker">Szín választó</string>
-    <string name="dlg_go_to_forecast">Ugrás az időjárás lapra</string>
-    <string name="dlg_select_action">Válasszon műveletet</string>
-    <string name="dlg_set_as_home">Beállítás \"Saját Város\"-nak </string>
     <string name="donate">Adományozás</string>
     <string name="donations_button_close">Bezár</string> 
     <string name="donations_description">Hasznosnak találod ezt az alkalmazást?\nTámogathatod a fejlsztést flattring-el vagy küldhetsz támogatást a Google Android Market-et használva!</string> 
@@ -64,57 +51,51 @@
     <string name="donations_paypal_item_name">InApp Adományozás</string> 
     <string name="donations_paypal">PayPal</string> 
     <string name="donations_thanks_dialog_title">Köszönöm!</string> 
-    <string name="donations_thanks_dialog">Köszönjük a támogatást!\nNagyra értékeljük!</string> 
-    <string name="download_video">Video letöltés</string> 
+    <string name="donations_thanks_dialog">Köszönjük a támogatást!\nNagyra értékeljük!</string>
     <string name="end_time_title">Vége</string>
     <string name="fetching_location">Helymeghatározás\u2026</string>
-    <string name="foreca_clear">Tiszta</string>
-    <string name="foreca_cloudy_l_rain">Szemerkélés</string>
-    <string name="foreca_cloudy_l_snow">Hószállingózás</string>
-    <string name="foreca_cloudy_l_wet_snow">Havaseső</string>
-    <string name="foreca_cloudy_rain">Eső</string>
-    <string name="foreca_cloudy_showers">Zivatarok</string>
-    <string name="foreca_cloudy_snow_showers">Hózáporok</string>
-    <string name="foreca_cloudy_snow">Hó</string>
-    <string name="foreca_cloudy_ts_rain">Felhős,helyenként eső</string>
-    <string name="foreca_cloudy_ts_snow">Felhós,helyenként havazás</string>
-    <string name="foreca_cloudy_ts_wet_snow">Felhős,helyenként havaseső</string>
-    <string name="foreca_cloudy_wet_snow_showers">Havaseső,hó</string>
-    <string name="foreca_cloudy_wet_snow">Havaseső</string>
-    <string name="foreca_cloudy">Felhős</string>
-    <string name="foreca_mostly_clear_pos_rain">Többnyire tiszta,eső lehetséges</string>
-    <string name="foreca_mostly_clear_pos_snow">Többnyire tiszta,hó lehetséges</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Többnyire tiszta,helyenként zivatar</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Többnyire tiszta,helyenként havazás</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Többnyire tiszta,helyenként havaseső</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Többnyire tiszta,helyenként havaseső</string>
-    <string name="foreca_mostly_clear">Többnyire tiszta</string>
-    <string name="foreca_overcast_l_rain">Szemerkélés</string>
-    <string name="foreca_overcast_l_snow">Hószállingózás</string>
-    <string name="foreca_overcast_l_wet_snow">Havaseső eshet</string>
-    <string name="foreca_overcast_rain">Eső</string>
-    <string name="foreca_overcast_showers">Zivatarok</string>
-    <string name="foreca_overcast_snow_showers">Hózáporok</string>
-    <string name="foreca_overcast_snow">Hó</string>
-    <string name="foreca_overcast_ts_rain">Eső lehetséges</string>
-    <string name="foreca_overcast_ts_snow">Havazás lehetséges</string>
-    <string name="foreca_overcast_ts_wet_snow">Havaseső lehetséges</string>
-    <string name="foreca_overcast_wet_snow_showers">Havaseső,hó</string>
-    <string name="foreca_overcast_wet_snow">Havaseső</string>
-    <string name="foreca_overcast">Borult</string>
-    <string name="foreca_partly_cloudy_l_rain">Könnyű eső</string>
-    <string name="foreca_partly_cloudy_l_snow">Gyenge havazás</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Szitálás</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Helyenként eső</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Helyenként havazás</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Helyenként havaseső</string>
-    <string name="foreca_partly_cloudy_rain">Eső</string>
-    <string name="foreca_partly_cloudy_showers">Záporok</string>
-    <string name="foreca_partly_cloudy_snow_showers">Részben felhős</string>
-    <string name="foreca_partly_cloudy_snow">Hó</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Részben felhős</string>
-    <string name="foreca_partly_cloudy_wet_snow">Részben felhős</string>
-    <string name="foreca_partly_cloudy">Részben felhős</string>
+    <string name="forecast_chance_of_rain">Eső várható</string>
+    <string name="forecast_chance_of_showers">Zivatar várható</string>
+    <string name="forecast_chance_of_snow">Havazás várható</string>
+    <string name="forecast_chance_of_snow_showers">Havazás</string>
+    <string name="forecast_chance_of_storm">Vihar várható</string>
+    <string name="forecast_chance_of_tstorm">Vihar</string>
+    <string name="forecast_clear">Tiszta</string>
+    <string name="forecast_cloudy">Felhős</string>
+    <string name="forecast_drizzle">Szitáló eső</string>
+    <string name="forecast_dust">Poros</string>
+    <string name="forecast_fair">Szép idő</string>
+    <string name="forecast_flurries">Széllökések</string>
+    <string name="forecast_fog">Köd</string>
+    <string name="forecast_freezing_drizzle">Fagyos, szitáló eső</string>
+	<string name="forecast_freezing_rain">Fagyos eső</string>
+    <string name="forecast_hail">Jégeső</string>
+    <string name="forecast_haze">Pára</string>
+    <string name="forecast_heavy_rain">Szakadó eső</string>
+    <string name="forecast_icy">Jeges</string>
+    <string name="forecast_light_rain">Enyhe eső</string>
+    <string name="forecast_light_snow">Enyhe havazás</string>
+    <string name="forecast_mist">Ködös</string>
+    <string name="forecast_mostly_cloudy">Többnyire felhős</string>
+    <string name="forecast_mostly_sunny">Többnyire napos</string>
+    <string name="forecast_overcast">Borult</string>
+    <string name="forecast_partly_cloudy">Részben felhős</string>
+    <string name="forecast_partly_sunny">Részben napos</string>
+    <string name="forecast_rain">Eső</string>
+    <string name="forecast_rain_and_snow">Eső és hó</string>
+    <string name="forecast_rain_showers">Zivatar</string>
+	<string name="forecast_sand">Homok</string>
+    <string name="forecast_scattered_showers">Szórványos eső</string>
+    <string name="forecast_scattered_thunderstorms">Szórványos viharok</string>
+    <string name="forecast_showers">Zivatarok</string>
+    <string name="forecast_sleet">Havas eső</string>
+    <string name="forecast_smoke">Füst</string>
+    <string name="forecast_snow">Havazás</string>
+    <string name="forecast_snow_showers">Hózápor</string>
+	<string name="forecast_snow_storm">Hóvihar</string>
+    <string name="forecast_sunny">Napos</string>
+    <string name="forecast_thunderstorm">Vihar égzengéssel</string>
+    <string name="forecast_windy">Vihar</string>
     <string name="just_now">Most</string>
     <string name="loading">Betöltés\u2026</string> 
     <string name="location_edit">Gépelje be a város nevét</string>
@@ -125,7 +106,6 @@
     <string name="menu_delete_theme">Téma törlése</string>
     <string name="menu_hourly">Óránként</string>
     <string name="menu_import">Téma importálása</string>
-    <string name="menu_indices">Életmód</string>
     <string name="menu_locations">Helyszínek</string>
     <string name="menu_moon_phases">Holdfázis</string>
     <string name="menu_settings">Beállítások</string>
@@ -159,13 +139,7 @@
     <string name="quiet_hours_enabled">Akkukímélés engedélyezése</string>
     <string name="quiet_hours_title">Akkukímélési mód</string>
     <string name="save_screen_shot_failed">Képernyőkép mentése nem sikerült</string>
-    <string name="settings_about_summary">Az alkalmazás névjegye</string>
     <string name="settings_about_title">Névjegy</string>
-    <string name="settings_animation_download_summary">Az időjárás animációjának letöltése (ha nem található a tárolón)</string>
-    <string name="settings_animation_download_title">Animációk letöltése</string>
-    <string name="settings_animation_show_summary">Időjárás animáció engedélyezés</string>
-    <string name="settings_animation_show_title">Animációt mutat</string>
-    <string name="settings_animation_type">Animáció típusa</string>
     <string name="settings_category_animation_sum">Időjárás animáció beállítások és letöltés</string>
     <string name="settings_category_animation">Animáció beállítások</string>
     <string name="settings_category_app_update">Alkalmazás frissítés</string>
@@ -185,8 +159,6 @@
     <string name="settings_check_updates_title">Frissítések ellenőrzése</string>
     <string name="settings_citydb_provider">Város adatbázis Szolgáltató</string>
     <string name="settings_click_actions">Kattintási műveletek</string>
-    <string name="settings_hide_bottom_bar_summary">Érintse meg a képernyőt a gombok elrejtéséhez</string>
-    <string name="settings_hide_bottom_bar_title">Alsó sáv elrejtése</string>
     <string name="settings_miui_support_summary">A MIUI natív widgetekhez kapcsolja be</string>
     <string name="settings_miui_support_title">MIUI widgetek</string>
     <string name="settings_miui_v5_summary">MIUI v5 ROM-hoz kapcsolja be</string>
@@ -199,8 +171,6 @@
     <string name="settings_notification_type">Értesítés típusa</string>
     <string name="settings_show_info_summary">Felület elemeinek kijelzése/elrejtése</string>
     <string name="settings_show_info_title">Információ kijelzés</string>
-    <string name="settings_show_weather_icons_summary">Időjárás ikonok (a szöveges leírás helyett) a 3 napos előrejelzésnél</string>
-    <string name="settings_show_weather_icons_title">Időjárás ikon</string>
     <string name="settings_time_format_12h">12 órás formátum</string>
     <string name="settings_update_autoupdate_summary">Időjárás előrejelzés automatikus frissítése</string>
     <string name="settings_update_autoupdate_title">Automatikus frissítés</string>
@@ -259,21 +229,10 @@
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mérföld"</string>
     <string name="visibility_units">Látótávolság mértékegysége</string>
-    <string name="weather_cond_chancerain">Helyenként eső</string>
-    <string name="weather_cond_cloudy">Felhős</string>
-    <string name="weather_cond_fog">Köd</string>
-    <string name="weather_cond_lightsnow">Hószállingózás</string>
-    <string name="weather_cond_overcast">Borult</string>
-    <string name="weather_cond_rain">Eső</string>
-    <string name="weather_cond_rainstorm">Felhőszakadás</string>
-    <string name="weather_cond_sleet">Ónos eső</string>
-    <string name="weather_cond_snow">Hó</string>
-    <string name="weather_cond_sunny">Napos</string>
-    <string name="weather_cond_t_storms">Zivatarok</string>
     <string name="weather_feel">"Hőérzet: "</string>
     <string name="weather_humidity">"Páratartalom: "</string>
     <string name="weather_no_city">Nincs ilyen város</string>
-    <string name="weather_no_conditions_data">Nincsenek időjárás adatok</string>
+    <string name="weather_no_data">Nincsenek időjárás adatok</string>
     <string name="weather_pressure">"Légnyomás: "</string>
     <string name="weather_sunrize">"Napkelte: "</string>
     <string name="weather_sunset">"Napnyugta: "</string>
