--- a/res/values-id/strings.xml
+++ b/res/values-id/strings.xml
@@ -35,24 +35,19 @@
 <string name="about_for_translators">Untuk penerjemah:</string>
 <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>
 <string name="about_sunny">Terang</string>
-<string name="about_sunny_night">Malam Terang</string>
 <string name="about_cloudy">Berawan</string>
-<string name="about_cloudy_night">Malam berawan</string>
 <string name="about_overcast">Mendung</string>
 <string name="about_dust">Berdebu</string>
 <string name="about_fog">Berkabut</string>
 <string name="about_hailstone">Hujan es batu</string>
 <string name="about_light_rain">Hujan ringan</string>
-<string name="about_rain">Hujan</string>
-<string name="about_showers">Hujan lebat</string>
+<string name="about_rain_drizzle">Hujan lebat</string>
 <string name="about_rainstorm">Hujan badai</string>
 <string name="about_t_storms">Badai</string>
 <string name="about_sleet">Hujan bercampur salju</string>
-<string name="about_snow">Salju</string>
 <string name="about_light_snow">Salju ringan</string>
 <string name="about_heavy_snow">Salju lebat</string>
 <string name="about_blizzard">Badai salju</string>
-<string name="animation_preview">Tampilan animasi</string>
 <string name="menu_update">Pengkinian</string>
 <string name="menu_settings">Pengaturan</string>
 <string name="menu_locations">Lokasi</string>
@@ -65,7 +60,7 @@
 <string name="location_search">Cari lokasi</string>
 <string name="location_edit">Masukan nama kota</string>
 <string name="weather_no_city">Kota tidak ada</string>
-<string name="weather_no_conditions_data">Tidak ada data cuaca</string>
+<string name="weather_no_data">Tidak ada data cuaca</string>
 <string name="weather_no_temp_data">-°</string>
 <string name="weather_humidity">"Kelembaban: "</string>
 <string name="weather_wind">"Angin: "</string>
@@ -74,18 +69,6 @@
 <string name="weather_visibility">"Pandangan: "</string>
 <string name="weather_sunrize">"Matahari terbit: "</string>
 <string name="weather_sunset">"Matahari terbenam: "</string>
-<string name="weather_forecast_empty">--</string>
-<string name="weather_cond_overcast">Mendung</string>
-<string name="weather_cond_sunny">Terang</string>
-<string name="weather_cond_chancerain">Kemungkinan hujan</string>
-<string name="weather_cond_sleet">Hujan bercampur salju</string>
-<string name="weather_cond_lightsnow">Salju ringan</string>
-<string name="weather_cond_rain">Hujan</string>
-<string name="weather_cond_cloudy">Berawan</string>
-<string name="weather_cond_fog">Berkabut</string>
-<string name="weather_cond_rainstorm">Badai hujan</string>
-<string name="weather_cond_snow">Salju</string>
-<string name="weather_cond_t_storms">Hujan badai</string>
 <string name="settings_category_update">Pengaturan pembaharuan</string>
 <string name="settings_category_update_sum">Pengaturan pembaruan otomatis dan waktunya</string>
 <string name="settings_category_animation">Pengaturan animasi</string>
@@ -93,24 +76,12 @@
 <string name="settings_update_interval_title">Jeda pembaharuan</string>
 <string name="settings_update_autoupdate_title">Otomatis diperbaharui</string>
 <string name="settings_update_autoupdate_summary">Perbaharui otomatis perkiraan cuaca</string>
-<string name="settings_animation_show_title">Lihat animasi</string>
-<string name="settings_animation_show_summary">Lihat animasi cuaca untuk kondisi terkini</string>
-<string name="settings_animation_download_title">Unduh animasi</string>
-<string name="settings_animation_download_summary">Unduh file video animasi untuk kondisi cuaca terkini (jika file belum ada dipenyimpanan lokal)</string>
 <string name="settings_about_title">Tentang</string>
-<string name="settings_about_summary">Informasi tentang aplikasi</string>
 <string name="no_provider">Gagal mendapatkan posisi\nPilih lokasi secara manual</string>
 <string name="network_error">Tidak dapat terhubung ke server</string>
 <string name="updating">Memperbaharui\u2026</string>
 <string name="just_now">Sekarang</string>
 <string name="fetching_location">Mendapatkan posisimu\u2026</string>
-<string name="conf_add_widget">Tambah Widget</string>
-<string name="conf_light_skin">Skin terang</string>
-<string name="conf_dark_skin">Skin gelap</string>
-<string name="conf_choose_skin">Pilih Skin</string>
-<string name="conf_name">Pengaturan Widget</string>
-<string name="download_video">Unduh video</string>
-<string name="conf_no_background">Tanpa latar belakang</string>
 <string name="settings_category_notification">Pengaturan pemberitahuan</string>
 <string name="settings_category_notification_sum">Pengaturan pemberitahuan cuaca</string>
 <string name="settings_category_network">Pengaturan jaringan</string>
@@ -134,8 +105,6 @@
 <string name="clear_miui_data_dialog_text">Database MIUI Weather dihapus!</string>
 <string name="clear_miui_data_dialog_ask">Clear MIUI Weather Provider database data?</string>
 <string name="settings_time_format_12h">Format waktu 12Jam</string>
-<string name="settings_show_weather_icons_title">Lihat gambar icon cuaca</string>
-<string name="settings_show_weather_icons_summary">Lihat gambar icon cuaca (bukan hanya tulisan keterangan) untuk perkiraan 3 hari</string>
 <string name="settings_notification_text_color_summary">Warna tulisan dan gambar icon pemberitahuan</string>
 <string name="settings_notification_color_title">Warna simbol statusbar</string>
 <string name="settings_category_widgets">Pengaturan Widgets</string>
@@ -166,16 +135,12 @@
 <string name="settings_show_info_title">Munculkan informasi</string>
 <string name="settings_show_info_summary">Muncul atau sembunyikan bagian antarmuka</string>
 <string name="settings_notification_type">Tipe pemberitahuan</string>
-<string name="settings_animation_type">Tipe Animasi</string>
 <string name="quiet_hours_title">Jam tenang</string>
 <string name="quiet_hours_enabled">Pengaktifan jam tenang</string>
 <string name="quiet_hours_enabled_on">Jam tenang diaktifkan</string>
 <string name="quiet_hours_enabled_off">Updates will function as normal</string>
 <string name="start_time_title">Mulai</string>
 <string name="end_time_title">Selesai</string>
-<string name="dlg_select_action">Pilih tindakan</string>
-<string name="dlg_go_to_forecast">Ke perkiraan</string>
-<string name="dlg_set_as_home">Set sebagai \"Kota Utama\"</string>
 <string name="wind_n">N</string>
 <string name="wind_ne">NE</string>
 <string name="wind_nne">N-NE</string>
