--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -2,8 +2,7 @@
 <resources>
     <string name="about_author">Autor:</string> 
     <string name="about_blizzard">Burza śnieżna</string> 
-    <string name="about_cloudy">Pochmurnie</string> 
-    <string name="about_cloudy_night">Pochmurna noc</string> 
+    <string name="about_cloudy">Pochmurnie</string>
     <string name="about_dust">Pylisto</string>
     <string name="about_fog">Mgła</string>
     <string name="about_for_translators">For Translators:</string>
@@ -13,17 +12,13 @@
     <string name="about_light_rain">Lekki deszcz</string>
     <string name="about_light_snow">Lekki śnieg</string>
     <string name="about_overcast">Zachmurzenie</string>
-    <string name="about_rain">Deszcz</string>
     <string name="about_rainstorm">Ulewy</string> 
-    <string name="about_showers">Przelotne deszcze</string> 
+    <string name="about_rain_drizzle">Przelotne deszcze</string>
     <string name="about_sleet">Deszcz ze śniegiem</string>
-    <string name="about_snow">Śnieg</string>
     <string name="about_social">Linki społecznościowe:</string>
     <string name="about_sunny">Bezchmurnie</string>
-    <string name="about_sunny_night">Bezchmurna noc</string>
     <string name="about_t_storms">Burze</string>
     <string name="about_version">Wersja:</string>
-    <string name="animation_preview">Podgląd animacji</string>
     <string name="app_name">Pogoda BZ</string>
     <string name="btn_add_location">Dodaj lokalizację</string>
     <string name="btn_delete_location">Usuń lokalizację</string>
@@ -34,19 +29,10 @@
     <string name="clear_miui_data_dialog_text">Dane pogody MIUI wyczyszczone!</string>
     <string name="clear_miui_data_summary">Usuwa dane dostawcy pogody MIUI</string>
     <string name="close">Zamknij</string>
-    <string name="conf_add_widget">Dodaj widżet</string>
-    <string name="conf_choose_skin">Wybierz skórkę</string>              
-    <string name="conf_dark_skin">Ciemny</string>
-    <string name="conf_light_skin">Jasny</string>
-    <string name="conf_name">Widżety</string>
-    <string name="conf_no_background">Brak tła</string>
     <string name="date_format_title">Format daty</string>
     <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="dialog_color_picker">Wybieranie kolorów</string>
-    <string name="dlg_go_to_forecast">Przejdź do prognozy</string>
-    <string name="dlg_select_action">Wybierz akcje</string>
-    <string name="dlg_set_as_home">Ustaw główną</string>
     <string name="donate">Przekaż</string>
     <string name="donations_button_close">Zamknij</string>
     <string name="donations_description">"Czy uważasz tę aplikację za przydatną?
@@ -65,56 +51,50 @@ Doceń autora pozytywnym komentarzem lub przekazując mu darowiznę!"</string>
     <string name="donations_thanks_dialog">"Dziekuję za darowiznę!
 Naprawdę to doceniam!"</string>
     <string name="donations_thanks_dialog_title">Dzięki!</string>
-    <string name="download_video">Pobierz wideo</string>
     <string name="end_time_title">Koniec</string>
     <string name="fetching_location">Określanie pozycji…</string>
-    <string name="foreca_clear">Pogodnie</string>
-    <string name="foreca_cloudy">Pochmurno</string>
-    <string name="foreca_cloudy_l_rain">Lekki deszcz</string>
-    <string name="foreca_cloudy_l_snow">Lekki śnieg</string>
-    <string name="foreca_cloudy_l_wet_snow">Lekki mokry śnieg</string>
-    <string name="foreca_cloudy_rain">Deszcz</string>
-    <string name="foreca_cloudy_showers">Deszcze</string>
-    <string name="foreca_cloudy_snow">Śnieg</string>
-    <string name="foreca_cloudy_snow_showers">Duże opady śniegu</string>
-    <string name="foreca_cloudy_ts_rain">Burze</string>
-    <string name="foreca_cloudy_ts_snow">Śnieżyce</string>
-    <string name="foreca_cloudy_ts_wet_snow">Burze z piorunami i mokry śnieg</string>
-    <string name="foreca_cloudy_wet_snow">Mokry śnieg</string>
-    <string name="foreca_cloudy_wet_snow_showers">Śnieg z deszczem</string>
-    <string name="foreca_mostly_clear">Pogodnie</string>
-    <string name="foreca_mostly_clear_pos_rain">Możliwy deszcz</string>
-    <string name="foreca_mostly_clear_pos_snow">Możliwy śnieg</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Możliwe burze</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Możliwe śnieżyce</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Możliwe burze z piorunami z mokrym śniegiem</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Możliwy mokry śnieg</string>
-    <string name="foreca_overcast">Prognoza</string>
-    <string name="foreca_overcast_l_rain">Lekki deszcz</string>
-    <string name="foreca_overcast_l_snow">Lekki śnieg</string>
-    <string name="foreca_overcast_l_wet_snow">Lekki mokry śnieg</string>
-    <string name="foreca_overcast_rain">Deszcz</string>
-    <string name="foreca_overcast_showers">Deszcze</string>
-    <string name="foreca_overcast_snow">Śnieg</string>
-    <string name="foreca_overcast_snow_showers">Śnieżyce</string>
-    <string name="foreca_overcast_ts_rain">Burze z piorunami i deszcz</string>
-    <string name="foreca_overcast_ts_snow">Burze z piorunami i śnieg</string>
-    <string name="foreca_overcast_ts_wet_snow">Burze z piorunami i mokry śnieg</string>
-    <string name="foreca_overcast_wet_snow">Mokry śnieg</string>
-    <string name="foreca_overcast_wet_snow_showers">Mokry śnieg</string>
-    <string name="foreca_partly_cloudy">Częściowe zachmurzenie</string>
-    <string name="foreca_partly_cloudy_l_rain">Lekki deszcz</string>
-    <string name="foreca_partly_cloudy_l_snow">Lekki śnieg</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Lekki mokry śnieg</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Możliwe burze z piorunami i deszcz</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Możliwe burze z piorunami i śnieg</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Możliwe burze z piorunami i mokrym śniegiem</string>
-    <string name="foreca_partly_cloudy_rain">Deszcz</string>
-    <string name="foreca_partly_cloudy_showers">Przelotne opady deszczu</string>
-    <string name="foreca_partly_cloudy_snow">Śnieg</string>
-    <string name="foreca_partly_cloudy_snow_showers">Przelotne opady śniegu</string>
-    <string name="foreca_partly_cloudy_wet_snow">Mokry śnieg</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Przelotne opady śniegu</string>
+    <string name="forecast_chance_of_rain">Możliwy deszcz</string>
+    <string name="forecast_chance_of_showers">Możliwy silny deszcz</string>
+    <string name="forecast_chance_of_snow">Możliwy śnieg</string>
+    <string name="forecast_chance_of_snow_showers">Opady śniegu</string>
+    <string name="forecast_chance_of_storm">Możliwa burza</string>
+    <string name="forecast_chance_of_tstorm">Burza</string>
+    <string name="forecast_clear">Bezchmurnie</string>
+    <string name="forecast_cloudy">Pochmurno</string>
+    <string name="forecast_drizzle">Mżawka</string>
+    <string name="forecast_dust">Pył</string>
+    <string name="forecast_fair">Przejrzyście</string>
+    <string name="forecast_flurries">Ulewy</string>
+    <string name="forecast_fog">Mgła</string>
+    <string name="forecast_freezing_drizzle">Marznąca mżawka</string>
+	<string name="forecast_freezing_rain">Marznący deszcz</string>
+    <string name="forecast_hail">Grad</string>
+    <string name="forecast_haze">Mgłą</string>
+    <string name="forecast_heavy_rain">Silny deszcz</string>
+    <string name="forecast_icy">gołoledź</string>
+    <string name="forecast_light_rain">Słaby deszcz</string>
+    <string name="forecast_light_snow">Słaby śnieg</string>
+    <string name="forecast_mist">Mgła</string>
+    <string name="forecast_mostly_cloudy">Całkowite zachmurzenie</string>
+    <string name="forecast_mostly_sunny">Słonecznie</string>
+    <string name="forecast_overcast">Pochmurno</string>
+    <string name="forecast_partly_cloudy">Częściowe zachmurzenie</string>
+    <string name="forecast_partly_sunny">Przeważnie słonecznie</string>
+    <string name="forecast_rain">Deszcz</string>
+    <string name="forecast_rain_and_snow">Deszcz ze śniegiem</string>
+    <string name="forecast_rain_showers">Opady deszczu</string>
+	<string name="forecast_sand">Piasek</string>
+    <string name="forecast_scattered_showers">Przelotne opady</string>
+    <string name="forecast_scattered_thunderstorms">Możliwe burze</string>
+    <string name="forecast_showers">Opady</string>
+    <string name="forecast_sleet">Deszcz ze śniegiem</string>
+    <string name="forecast_smoke">Zadymienie</string>
+    <string name="forecast_snow">Śnieg</string>
+    <string name="forecast_snow_showers">Opady śniegu</string>
+	<string name="forecast_snow_storm">Burza śniegu</string>
+    <string name="forecast_sunny">Słonecznie</string>
+    <string name="forecast_thunderstorm">Burza</string>
+    <string name="forecast_windy">Burza</string>    
     <string name="changelog">Zmiany</string>    
     <string name="just_now">Teraz</string>
     <string name="loading">Wczytywanie\u2026</string>
@@ -127,7 +107,6 @@ Naprawdę to doceniam!"</string>
     <string name="menu_delete_theme">Usuń motyw</string>
     <string name="menu_hourly">Godzinowa</string>
     <string name="menu_import">Wczytaj motyw z SD</string>
-    <string name="menu_indices">Horoskop</string>
     <string name="menu_locations">Lokalizacje</string>
     <string name="menu_moon_phases">Fazy księżyca</string>
     <string name="menu_settings">Ustawienia</string>
@@ -161,13 +140,7 @@ Wybierz lokalizację ręcznie"</string>
     <string name="quiet_hours_enabled_off">Normalna częstotliwość powiadomień</string>
     <string name="quiet_hours_enabled_on">Ciche godziny włączone</string>
     <string name="quiet_hours_title">Ciche godziny</string>
-    <string name="settings_about_summary">Informacje o aplikacji</string>
     <string name="settings_about_title">Informacje</string>
-    <string name="settings_animation_download_summary">Pobiera pliki wideo animacji dla warunków pogodowych (w przypadku gdy nie znaleziono plików wideo w pamięci urządzenia)</string>
-    <string name="settings_animation_download_title">Pobierz animacje</string>
-    <string name="settings_animation_show_summary">Pokaż animacje dla aktualnych warunków pogodowych</string>
-    <string name="settings_animation_show_title">Pokaż animacje</string>
-    <string name="settings_animation_type">Typ animacji</string>
     <string name="settings_category_animation">Animacje</string>
     <string name="settings_category_animation_sum">Animacje pogody</string>
     <string name="settings_category_app_update">Aktualizacje aplikacji</string>
@@ -187,8 +160,6 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_click_actions">Akcje kliknięcia</string>
     <string name="settings_check_updates_summary">Sprawdź aktualizacje aplikacji przy uruchamianiu</string>
     <string name="settings_check_updates_title">Sprawdjzaj aktualizacje</string>
-    <string name="settings_hide_bottom_bar_title">Ukryj dolny pasek</string>
-    <string name="settings_hide_bottom_bar_summary">Dotknij ekranu by ukryć dolny pasek menu</string>
     <string name="settings_miui_support_summary">Włącz wsparcie dla natywnych widżetów MIUI</string>
     <string name="settings_miui_support_title">Widżety MIUI</string>
     <string name="settings_miui_v5_summary">Kompatybilność z systemem MIUI v5</string>
@@ -201,8 +172,6 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_notification_type">Typ powiadomienia</string>
     <string name="settings_show_info_summary">Pokaż/ukryj elementy widżetu</string>
     <string name="settings_show_info_title">Pokaż informacje</string>
-    <string name="settings_show_weather_icons_summary">Pokaż ikonę pogody (zamiast opisu tekstowego) w 3-dniowej prognozie</string>
-    <string name="settings_show_weather_icons_title">Pokaż ikonę pogody</string>
     <string name="settings_time_format_12h">Format 12 godz.</string>
     <string name="settings_update_autoupdate_summary">Automatyczna aktualizacja prognozy pogody</string>
     <string name="settings_update_autoupdate_title">Automatyczna aktualizacja</string>
@@ -267,22 +236,10 @@ Wybierz lokalizację ręcznie"</string>
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mile"</string>
-    <string name="weather_cond_chancerain">Szanse na deszcz</string>
-    <string name="weather_cond_cloudy">Pochmurnie</string>
-    <string name="weather_cond_fog">Mgła</string>
-    <string name="weather_cond_lightsnow">Lekki śnieg</string>
-    <string name="weather_cond_overcast">Prognoza</string>
-    <string name="weather_cond_rain">Deszcz</string>
-    <string name="weather_cond_rainstorm">Ulewy</string>
-    <string name="weather_cond_sleet">Deszcz ze śniegiem</string>
-    <string name="weather_cond_snow">Śnieg</string>
-    <string name="weather_cond_sunny">Bezchmurnie</string>
-    <string name="weather_cond_t_storms">Burze</string>
     <string name="weather_feel">"Odczuwalnie: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Wilgotność: "</string>
     <string name="weather_no_city">Nie znaleziono miasta</string>
-    <string name="weather_no_conditions_data">Brak informacji pogodowych</string>
+    <string name="weather_no_data">Brak informacji pogodowych</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Ciśnienie: "</string>
     <string name="weather_sunrize">"Wschód: "</string>
