--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -9,38 +9,29 @@
     <string name="settings_category_forecast_update">Actualizare prognoză</string>
     <string name="about_version">Versiune:</string>
     <string name="about_author">Autor:</string>
-    <string name="about_images">Imagini şi animaţii video</string>
     <string name="about_sunny">Senin</string>
-    <string name="about_sunny_night">Senin</string>
     <string name="about_cloudy">Înnorat</string>
-    <string name="about_cloudy_night">Înnorat</string>
     <string name="about_overcast">Posomorât</string>
     <string name="about_dust">Praf</string>
     <string name="about_fog">Ceaţă</string>
     <string name="about_hailstone">Grindină</string>
     <string name="about_light_rain">Ploaie uşoară</string>
-    <string name="about_rain">Ploaie</string>
-    <string name="about_showers">Averse</string>
+    <string name="about_rain_drizzle">Averse</string>
     <string name="about_rainstorm">Furtună</string>
     <string name="about_t_storms">Furtună cu desc. electrice</string>
     <string name="about_sleet">Lapoviţă</string>
-    <string name="about_snow">Ninsoare</string>
-    <string name="animation_preview">Previzualizare animaţii</string>
     <string name="menu_update">Actualizare</string>
     <string name="menu_settings">Setări</string>
     <string name="location_list">Locaţii</string>
     <string name="location_search">Căutare locaţie</string>
     <string name="location_edit">Introduceţi numele oraşului</string>
     <string name="weather_no_city">Nici un oraş</string>
-    <string name="weather_no_conditions_data">Nu există date despre vreme</string>
+    <string name="weather_no_data">Nu există date despre vreme</string>
     <string name="weather_humidity">"Umiditate: "</string>
     <string name="weather_wind">"Vânt: "</string>
     <string name="weather_feel">"Se simte a fi: "</string>
     <string name="weather_pressure">"Presiune: "</string>
     <string name="weather_visibility">"Vizibilitate: "</string>
-    <string name="weather_forecast_tom">Lipsă date</string>
-    <string name="weather_forecast_tom2">Lipsă date</string>
-    <string name="weather_forecast_tom3">Lipsă date</string>
     <string name="settings_category_update">Setări actualizare</string>
     <string name="settings_category_update_sum">Setări pentru actualizarea automată și ora actualizării automate</string>
     <string name="settings_category_animation">Setări animaţie</string>
@@ -48,25 +39,55 @@
     <string name="settings_update_interval_title">Interval actualizare</string>
     <string name="settings_update_autoupdate_title">Actualizare automată</string>
     <string name="settings_update_autoupdate_summary">Actualizare automată a prognozei meteo</string>
-    <string name="settings_animation_show_title">Afişaţi animaţiile</string>
-    <string name="settings_animation_show_summary">Afişaţi animaţiile pentru condiţiile curente ale vremii</string>
-    <string name="settings_animation_download_title">Descărcaţi anumaţii</string>
-    <string name="settings_animation_download_summary">Descărcaţi fişierele video ale animaţiilor condiţiilor curente ale vremii (dacă fişierul video nu s-a găsit în stocarea locală)</string>
     <string name="settings_about_title">Despre</string>
-    <string name="settings_about_summary">Informații despre aplicație</string>
     <string name="no_provider">"Poziționarea eșuată.
 Selectaţi locaţia manual"</string>
     <string name="network_error">Nu se poate conecta la server</string>
     <string name="updating">Actualizare…</string>
     <string name="just_now">Acum</string>
     <string name="fetching_location">Obţinere locaţie…</string>
-    <string name="conf_add_widget">Adăugaţi obiect widget</string>
-    <string name="conf_light_skin">Skin deschis</string>
-    <string name="conf_dark_skin">Skin întunecat</string>
-    <string name="conf_choose_skin">Alegeţi Skin</string>
-    <string name="conf_name">Setări obiect widget</string>
-    <string name="download_video">Decărcaţi video</string>
-    <string name="conf_no_background">Fără fundal</string>
+	<string name="forecast_chance_of_rain">Şanse de ploaie</string>
+    <string name="forecast_chance_of_showers">Şanse de ploaie</string>
+    <string name="forecast_chance_of_snow">Şanse de zăpadă</string>
+    <string name="forecast_chance_of_snow_showers">Şanse de ninsoare</string>
+    <string name="forecast_chance_of_storm">Şanse de furtună</string>
+    <string name="forecast_chance_of_tstorm">Furtună cu fulgere</string>
+    <string name="forecast_clear">Senin</string>
+    <string name="forecast_cloudy">Noros</string>
+    <string name="forecast_drizzle">Burniţă</string>
+    <string name="forecast_dust">Brumă</string>
+    <string name="forecast_fair">Favorabil</string>
+    <string name="forecast_flurries">Rafale</string>
+    <string name="forecast_fog">Ceaţă</string>
+    <string name="forecast_freezing_drizzle">Chiciură</string>
+	<string name="forecast_freezing_rain">Ploaie îngheţată</string>
+    <string name="forecast_hail">Grindină</string>
+    <string name="forecast_haze">Negură</string>
+    <string name="forecast_heavy_rain">Ploaie torenţială</string>
+    <string name="forecast_icy">Ingheţ</string>
+    <string name="forecast_light_rain">Ploaie uşoară</string>
+    <string name="forecast_light_snow">Fulguială</string>
+    <string name="forecast_mist">Negură</string>
+    <string name="forecast_mostly_cloudy">Predominant noros</string>
+    <string name="forecast_mostly_sunny">Predominant însorit</string>
+    <string name="forecast_overcast">Înnorat</string>
+    <string name="forecast_partly_cloudy">Parţial noros</string>
+    <string name="forecast_partly_sunny">Parţial însorit</string>
+    <string name="forecast_rain">Ploaie</string>
+    <string name="forecast_rain_and_snow">Ploaie şi zăpadă</string>
+    <string name="forecast_rain_showers">Ploaie</string>
+	<string name="forecast_sand">Nisip</string>
+    <string name="forecast_scattered_showers">Averse de ploaie</string>
+    <string name="forecast_scattered_thunderstorms">Averse şi descărcări electrice</string>
+    <string name="forecast_showers">Picuri de ploaie</string>
+    <string name="forecast_sleet">Lapoviţă</string>
+    <string name="forecast_smoke">Abur</string>
+    <string name="forecast_snow">Zăpadă</string>
+    <string name="forecast_snow_showers">Averse de ninsoare</string>
+	<string name="forecast_snow_storm">Furtuni de ninsoare</string>
+    <string name="forecast_sunny">Soare</string>
+    <string name="forecast_thunderstorm">Furtună</string>
+    <string name="forecast_windy">Furtună</string>
     <string name="settings_category_notification">Setări notificări</string>
     <string name="settings_category_notification_sum">Setări notificări meteo</string>
     <string name="settings_category_network">Setări reţea</string>
@@ -78,8 +99,6 @@ Selectaţi locaţia manual"</string>
     <string name="settings_update_roaming_summary">Actualizaţi în mod automat prognoza meteo, chiar şi atunci când sunteţi în roaming. Rețineți că puteți avea taxe suplimentare în factură</string>
     <string name="settings_category_appearance">Aspect</string>
     <string name="settings_category_appearance_sum">Setări aspect (afişaţi/ascundeţi elemente de interfaţă etc.)</string>
-    <string name="settings_show_weather_icons_title">Afişaţi pictogramele meteo</string>
-    <string name="settings_show_weather_icons_summary">Afişaţi pictogramele meteo (în loc de descriere textuală meteo) în prognoza meteo pt. 3 zile</string>
     <string name="settings_notification_color_title">Culoare simbol bară de stare</string>
     <string name="settings_category_widgets">Setări obiecte widget</string>
     <string name="settings_category_widgets_sum">Aspect obiecte widget şi acţiuni la clic</string>
@@ -113,9 +132,6 @@ Selectaţi locaţia manual"</string>
     <string name="quiet_hours_enabled_off">Actualizările vor funcționa în mod normal</string>
     <string name="start_time_title">Început</string>
     <string name="end_time_title">Sfârşit</string>
-    <string name="dlg_select_action">Selectaţi o acţiune</string>
-    <string name="dlg_go_to_forecast">Mergeţi la prognoză</string>
-    <string name="dlg_set_as_home">Setaţi ca \"Oraş Acasă\"</string>
     <string name="settings_widgets_widget4x1_transparent_title">Fundal transparent</string> 
     <string name="settings_widgets_widget4x1_transparent_sum">Debifat pentru fundal implicit</string> 
     <string name="settings_widgets_widget4x1_data_title">Date extinse</string>
