--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -57,53 +57,51 @@
     <string name="donations_thanks_dialog_title">Благодарю!</string>
     <string name="end_time_title">Конец</string>
     <string name="fetching_location">Определение местоположения…</string>
-    <string name="foreca_clear">Ясно</string>
-    <string name="foreca_cloudy">Облачно</string>
-    <string name="foreca_cloudy_l_rain">Небольшой дождь</string>
-    <string name="foreca_cloudy_l_snow">Небольшой снег</string>
-    <string name="foreca_cloudy_l_wet_snow">Небольшой мокрый снег</string>
-    <string name="foreca_cloudy_rain">Дождь</string>
-    <string name="foreca_cloudy_showers">Ливни</string>
-    <string name="foreca_cloudy_snow">Снег</string>
-    <string name="foreca_cloudy_snow_showers">Снег</string>
-    <string name="foreca_cloudy_ts_rain">Гроза с дождем</string>
-    <string name="foreca_cloudy_ts_snow">Гроза со снегом</string>
-    <string name="foreca_cloudy_ts_wet_snow">Гроза с мокрым снегом</string>
-    <string name="foreca_cloudy_wet_snow">Мокрый снег</string>
-    <string name="foreca_cloudy_wet_snow_showers">Мокрый снег</string>
-    <string name="foreca_mostly_clear">Ясно</string>
-    <string name="foreca_mostly_clear_pos_rain">Возможен дождь</string>
-    <string name="foreca_mostly_clear_pos_snow">Возможен снег</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Возможна гроза с дождем</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Возможна гроза со снегом</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Возможна гроза с мокрым снегом</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Возможен мокрый снег</string>
-    <string name="foreca_overcast">Пасмурно</string>
-    <string name="foreca_overcast_l_rain">Небольшой дождь</string>
-    <string name="foreca_overcast_l_snow">Небольшой снег</string>
-    <string name="foreca_overcast_l_wet_snow">Небольшой мокрый снег</string>
-    <string name="foreca_overcast_rain">Дождь</string>
-    <string name="foreca_overcast_showers">Ливни</string>
-    <string name="foreca_overcast_snow">Снег</string>
-    <string name="foreca_overcast_snow_showers">Снег</string>
-    <string name="foreca_overcast_ts_rain">Гроза с дождем</string>
-    <string name="foreca_overcast_ts_snow">Гроза со снегом</string>
-    <string name="foreca_overcast_ts_wet_snow">Гроза с мокрым снегом</string>
-    <string name="foreca_overcast_wet_snow">Мокрый снег</string>
-    <string name="foreca_overcast_wet_snow_showers">Мокрый снег</string>
-    <string name="foreca_partly_cloudy">Переменная облачность</string>
-    <string name="foreca_partly_cloudy_l_rain">Небольшой дождь</string>
-    <string name="foreca_partly_cloudy_l_snow">Небольшой снег</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Небольшой мокрый снег</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Возможна гроза с дождем</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Возможна гроза со снегом</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Возможна гроза с мокрым снегом</string>
-    <string name="foreca_partly_cloudy_rain">Дождь</string>
-    <string name="foreca_partly_cloudy_showers">Ливни</string>
-    <string name="foreca_partly_cloudy_snow">Снег</string>
-    <string name="foreca_partly_cloudy_snow_showers">Снег</string>
-    <string name="foreca_partly_cloudy_wet_snow">Мокрый снег</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Мокрый снег</string>
+    <string name="forecast_chance_of_rain">Возможен дождь</string>
+    <string name="forecast_chance_of_showers">Возможен ливень</string>
+    <string name="forecast_chance_of_snow">Возможен снегопад</string>
+    <string name="forecast_chance_of_snow_showers">Ливни со снегом</string>
+    <string name="forecast_chance_of_storm">Возможен шторм</string>
+    <string name="forecast_chance_of_tstorm">Возможна гроза</string>
+    <string name="forecast_clear">Ясно</string>
+    <string name="forecast_cloudy">Облачно</string>
+    <string name="forecast_cold">Холодно</string>
+    <string name="forecast_drizzle">Моросящий дождь</string>
+    <string name="forecast_dust">Пыль</string>
+    <string name="forecast_fair">Ясно</string>
+    <string name="forecast_flurries">Порывы ветра</string>
+    <string name="forecast_fog">Туман</string>
+    <string name="forecast_freezing_drizzle">Моросящий снег</string>
+    <string name="forecast_freezing_rain">Ледяной дождь</string>
+    <string name="forecast_hail">Град</string>
+    <string name="forecast_haze">Дымка</string>
+    <string name="forecast_heavy_rain">Сильный дождь</string>
+    <string name="forecast_hot">Жара</string>
+    <string name="forecast_icy">Гололед</string>
+    <string name="forecast_light_rain">Небольшой дождь</string>
+    <string name="forecast_light_snow">Небольшой снег</string>
+    <string name="forecast_mist">Туман</string>
+    <string name="forecast_mostly_cloudy">В основном облачно</string>
+    <string name="forecast_mostly_sunny">В основном солнечно</string>
+    <string name="forecast_overcast">Пасмурно</string>
+    <string name="forecast_partly_cloudy">Облачно с прояснениями</string>
+    <string name="forecast_partly_sunny">Иногда солнечно</string>
+    <string name="forecast_rain">Дождь</string>
+    <string name="forecast_rain_and_snow">Дождь со снегом</string>
+    <string name="forecast_rain_showers">Дождь</string>
+    <string name="forecast_sand">Песок</string>
+    <string name="forecast_scattered_showers">Временами ливни</string>
+    <string name="forecast_scattered_thunderstorms">Временами грозы</string>
+    <string name="forecast_showers">Дожди</string>
+    <string name="forecast_sleet">Мокрый снег</string>
+    <string name="forecast_smoke">Дым</string>
+    <string name="forecast_snow">Снег</string>
+    <string name="forecast_snow_showers">Ливни со снегом</string>
+    <string name="forecast_snow_storm">Метель</string>
+    <string name="forecast_sunny">Солнечно</string>
+    <string name="forecast_thunderstorm">Гроза</string>
+    <string name="forecast_thunderstorms">Грозы</string>
+    <string name="forecast_windy">Ветренно</string>
     <string name="changelog">Список изменений</string>
     <string name="just_now">Только что</string>
     <string name="loading">Загрузка…</string>
@@ -151,7 +149,6 @@
     <string name="quiet_hours_enabled_off">Обновления будут работать как обычно</string>
     <string name="quiet_hours_enabled_on">Тихие часы включены</string>
     <string name="quiet_hours_title">Тихие часы</string>
-    <string name="settings_about_summary">Информация о программе</string>
     <string name="settings_about_title">О программе</string>
     <string name="settings_category_animation">Анимация</string>
     <string name="settings_category_animation_sum">Предпросмотр анимации</string>
@@ -250,21 +247,10 @@
     <string name="visibility_units_km">" км"</string>
     <string name="visibility_units_m">" м"</string>
     <string name="visibility_units_mi">" миль"</string>
-    <string name="weather_cond_cloudy">Облачно</string>
-    <string name="weather_cond_fog">Туман</string>
-    <string name="weather_cond_chancerain">Возможен дождь</string>
-    <string name="weather_cond_lightsnow">Небольшой снег</string>
-    <string name="weather_cond_overcast">Пасмурно</string>
-    <string name="weather_cond_rain">Дождь</string>
-    <string name="weather_cond_rainstorm">Шквалистые дожди</string>
-    <string name="weather_cond_sleet">Мокрый снег</string>
-    <string name="weather_cond_snow">Снег</string>
-    <string name="weather_cond_sunny">Ясно</string>
-    <string name="weather_cond_t_storms">Гроза</string>
     <string name="weather_feel">"Ощущается как: "</string>
     <string name="weather_humidity">"Влажность: "</string>
     <string name="weather_no_city">Город не выбран</string>
-    <string name="weather_no_conditions_data">Нет данных</string>
+    <string name="weather_no_data">Нет данных</string>
     <string name="weather_pressure">"Давление: "</string>
     <string name="weather_sunrize">"Восход: "</string>
     <string name="weather_sunset">"Закат: "</string>
