--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -14,14 +14,11 @@
     <string name="about_light_rain">Mrholenie</string>
     <string name="about_light_snow">Jemný sneh</string>
     <string name="about_overcast">Zamračené</string>
-    <string name="about_rain">Dážď</string>
     <string name="about_rainstorm">Prietrž</string>
-    <string name="about_showers">Prehánky</string>
+    <string name="about_rain_drizzle">Prehánky</string>
     <string name="about_sleet">Pľušť</string>
-    <string name="about_snow">Sneženie</string>
     <string name="about_social">Sociálne odkazy:</string>
     <string name="about_sunny">Jasno</string>
-    <string name="about_sunny_night">Jasná noc</string>
     <string name="about_t_storms">Búrky</string>
     <string name="about_version">Verzia:</string>
     <string name="action_bar_selected_format">Vybraných: %d</string>
@@ -61,53 +58,48 @@
     <string name="donations_yandex">Yandex.Money</string>
     <string name="end_time_title">Koniec</string>
     <string name="fetching_location">Získavanie Vašej polohy...</string>
-    <string name="foreca_clear">Jasno</string>
-    <string name="foreca_cloudy">Oblačno</string>
-    <string name="foreca_cloudy_l_rain">Jemny dážď</string>
-    <string name="foreca_cloudy_l_snow">Jemný sneh</string>
-    <string name="foreca_cloudy_l_wet_snow">Jemný mokrý sneh</string>
-    <string name="foreca_cloudy_rain">Dážď</string>
-    <string name="foreca_cloudy_showers">Prehánky</string>
-    <string name="foreca_cloudy_snow">Sneh</string>
-    <string name="foreca_cloudy_snow_showers">Snehové prehánky</string>
-    <string name="foreca_cloudy_ts_rain">Búrka s dažďom</string>
-    <string name="foreca_cloudy_ts_snow">Búrka so snehom</string>
-    <string name="foreca_cloudy_ts_wet_snow">Búrka s mokrým snehom</string>
-    <string name="foreca_cloudy_wet_snow">Mokrý sneh</string>
-    <string name="foreca_cloudy_wet_snow_showers">Prehánky s mokrým snehom</string>
-    <string name="foreca_mostly_clear">Polojasno</string>
-    <string name="foreca_mostly_clear_pos_rain">Možnosť dažďa</string>
-    <string name="foreca_mostly_clear_pos_snow">Možnosť snehu</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Možnosť búrky s dažďom</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Možnosť búrky so snehom</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Možnosť búrky s mokrým snehom</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Možnosť mokrého snehu</string>
-    <string name="foreca_overcast">Zamračené</string>
-    <string name="foreca_overcast_l_rain">Jemný dážď</string>
-    <string name="foreca_overcast_l_snow">Jemný sneh</string>
-    <string name="foreca_overcast_l_wet_snow">Jemný mokrý sneh</string>
-    <string name="foreca_overcast_rain">Dážď</string>
-    <string name="foreca_overcast_showers">Prehánky</string>
-    <string name="foreca_overcast_snow">Sneh</string>
-    <string name="foreca_overcast_snow_showers">Snehové prehánky</string>
-    <string name="foreca_overcast_ts_rain">Búrka s dažďom</string>
-    <string name="foreca_overcast_ts_snow">Búrka so snehom</string>
-    <string name="foreca_overcast_ts_wet_snow">Búrka s mokrým snehom</string>
-    <string name="foreca_overcast_wet_snow">Mokrý sneh</string>
-    <string name="foreca_overcast_wet_snow_showers">Prehánky s mokrým snehom</string>
-    <string name="foreca_partly_cloudy">Polojasno</string>
-    <string name="foreca_partly_cloudy_l_rain">Jemny dážď</string>
-    <string name="foreca_partly_cloudy_l_snow">Jemný sneh</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Jemný mokrý sneh</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Možnosť búrky s dažďom</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Možnosť búrky so snehom</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Možnosť búrky s mokrým snehom</string>
-    <string name="foreca_partly_cloudy_rain">Dážď</string>
-    <string name="foreca_partly_cloudy_showers">Prehánky</string>
-    <string name="foreca_partly_cloudy_snow">Sneh</string>
-    <string name="foreca_partly_cloudy_snow_showers">Snehové prehánky</string>
-    <string name="foreca_partly_cloudy_wet_snow">Mokrý sneh</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Prehánky s mokrým snehom</string>
+    <string name="forecast_chance_of_rain">Možnosť dažďa</string>
+    <string name="forecast_chance_of_showers">Možnosť prehánok</string>
+    <string name="forecast_chance_of_snow">Možnosť sneženia</string>
+    <string name="forecast_chance_of_snow_showers">Snehové prehánky</string>
+    <string name="forecast_chance_of_storm">Možnosť búrok</string>
+    <string name="forecast_chance_of_tstorm">Búrka</string>
+    <string name="forecast_clear">Jasno</string>
+    <string name="forecast_cloudy">Zamračené</string>
+    <string name="forecast_drizzle">Mrholenie</string>
+    <string name="forecast_dust">Prašnosť</string>
+    <string name="forecast_fair">Pekne</string>
+    <string name="forecast_flurries">Ľahké prehánky</string>
+    <string name="forecast_fog">Hmla</string>
+    <string name="forecast_freezing_drizzle">Mrznúce mrholenie</string>
+	<string name="forecast_freezing_rain">Mrznúci dážď</string>
+    <string name="forecast_hail">Krupobitie</string>
+    <string name="forecast_haze">Opar</string>
+    <string name="forecast_heavy_rain">Výdatný dážď</string>
+    <string name="forecast_icy">Námraza</string>
+    <string name="forecast_light_rain">Slabý dážď</string>
+    <string name="forecast_light_snow">Slabé sneženie</string>
+    <string name="forecast_mist">Hmlový opar</string>
+    <string name="forecast_mostly_cloudy">Prevažne oblačno</string>
+    <string name="forecast_mostly_sunny">Prevažne jasno</string>
+    <string name="forecast_overcast">Zamračené</string>
+    <string name="forecast_partly_cloudy">Čiastočne oblačno</string>
+    <string name="forecast_partly_sunny">Polojasno</string>
+    <string name="forecast_rain">Dážď</string>
+    <string name="forecast_rain_and_snow">Dážď so snehom</string>
+    <string name="forecast_rain_showers">Dažďové prehánky</string>
+	<string name="forecast_sand">Piesočná búrka</string>
+    <string name="forecast_scattered_showers">Ojedinelé prehánky</string>
+    <string name="forecast_scattered_thunderstorms">Ojedinelé búrky</string>
+    <string name="forecast_showers">Prehánky</string>
+    <string name="forecast_sleet">Dážď so snehom</string>
+    <string name="forecast_smoke">Dymno</string>
+    <string name="forecast_snow">Sneženie</string>
+    <string name="forecast_snow_showers">Snehové prehánky</string>
+	<string name="forecast_snow_storm">Snehová búrka</string>
+    <string name="forecast_sunny">Slnečno</string>
+    <string name="forecast_thunderstorm">Búrka</string>
+    <string name="forecast_windy">Búrka</string>
     <string name="just_now">Práve teraz</string>
     <string name="loading">Načítavanie...</string>	
     <string name="location_edit">Vložte názov Mesta</string>
@@ -252,22 +244,10 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" míle"</string>
-    <string name="weather_cond_chancerain">Možné zrážky</string>
-    <string name="weather_cond_cloudy">Zamračené</string>
-    <string name="weather_cond_fog">Hmla</string>
-    <string name="weather_cond_lightsnow">Jemné sneženie</string>
-    <string name="weather_cond_overcast">Zamračené</string>
-    <string name="weather_cond_rain">Dážď</string>
-    <string name="weather_cond_rainstorm">Búrka</string>
-    <string name="weather_cond_sleet">Čľapkanica</string>
-    <string name="weather_cond_snow">Sneh</string>
-    <string name="weather_cond_sunny">Jasno</string>
-    <string name="weather_cond_t_storms">Búrka</string>
     <string name="weather_feel">"Pocitovo: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Vlhkosť: "</string>
     <string name="weather_no_city">Žiadne Mesto</string>
-    <string name="weather_no_conditions_data">Žiadne údaje o počasí</string>
+    <string name="weather_no_data">Žiadne údaje o počasí</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Tlak: "</string>
     <string name="weather_sunrize">"Východ: "</string>
