--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -16,7 +16,7 @@
     <string name="about_moderate_rain">Дощ</string>
     <string name="about_moderate_snow">Сніг</string>
     <string name="about_overcast">Хмарно</string>
-    <string name="about_rain_showers">Зливи</string>
+    <string name="about_rain_drizzle">Зливи</string>
     <string name="about_rainstorm">Шквалисті дощі</string>
     <string name="about_sleet">Мокрий сніг</string>
     <string name="about_snow_showers">Невеликий сніг</string>
@@ -24,7 +24,6 @@
     <string name="about_sunny">Ясно</string>
     <string name="about_t_storms">Гроза</string>
     <string name="about_version">Версія:</string>
-    <string name="animation_preview">Передперегляд анімації</string>
     <string name="applying_theme">Застосування теми\u2026</string>
     <string name="app_name">Погода BZ</string>
     <string name="btn_add_location">Додати місто</string>
@@ -38,12 +37,6 @@
     <string name="clear_miui_data_dialog_text">Очищення бази даних погоди MIUI завершена!</string>
     <string name="clear_miui_data_summary">Очищає базу даних WeatherProvider</string>
     <string name="close">Закрити</string>
-    <string name="conf_add_widget">Додати віджет</string>
-    <string name="conf_choose_skin">Выберіть скін</string>
-    <string name="conf_dark_skin">Темний скін</string>
-    <string name="conf_light_skin">Світлий скін</string>
-    <string name="conf_name">Налаштування віджету</string>
-    <string name="conf_no_background">Без фону (прозорий)</string>
     <string name="date_format_title">Формат дати</string>
     <string name="dialog_color_picker">Вибір кольору</string>
     <string name="donate">Пожертви</string>
@@ -63,59 +56,53 @@
     <string name="donations_thanks_dialog">Щиро дякую за пожертву! Я дуже це ціню!</string>
     <string name="donations_thanks_dialog_title">Щиро дякую!</string>
     <string name="donations_yandex">Яндекс.Гроші</string>
-    <string name="dlg_go_to_forecast">Перейти до прогнозу</string>
-    <string name="dlg_select_action">Виберіть дію</string>
-    <string name="dlg_set_as_home">Як \"Основне місто\"</string>
-    <string name="download_video">Завантажити відео</string>
     <string name="end_time_title">Кінец</string>
     <string name="fetching_location">Визначення розташування\u2026</string>
-    <string name="foreca_clear">Ясно</string>
-    <string name="foreca_cloudy">Хмарно</string>
-    <string name="foreca_cloudy_l_rain">Невелекий дощ</string>
-    <string name="foreca_cloudy_l_snow">Невеликий сніг</string>
-    <string name="foreca_cloudy_l_wet_snow">Невеликий мокрий сніг</string>
-    <string name="foreca_cloudy_rain">Дощ</string>
-    <string name="foreca_cloudy_showers">Зливи</string>
-    <string name="foreca_cloudy_snow">Сніг</string>
-    <string name="foreca_cloudy_snow_showers">Сніг</string>
-    <string name="foreca_cloudy_ts_rain">Гроза з дощем</string>
-    <string name="foreca_cloudy_ts_snow">Гроза зі снігом</string>
-    <string name="foreca_cloudy_ts_wet_snow">Гроза з мокрим снігом</string>
-    <string name="foreca_cloudy_wet_snow">Мокрий сніг</string>
-    <string name="foreca_cloudy_wet_snow_showers">Мокрий сніг</string>
-    <string name="foreca_mostly_clear">Переважно ясно</string>
-    <string name="foreca_mostly_clear_pos_rain">Можливий дощ</string>
-    <string name="foreca_mostly_clear_pos_snow">Можливий сніг</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Можлива гроза з дощем</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Можлива гроза зі снігом</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Можлива гроза з мокрим снігом</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Можливий мокрий сніг</string>
-    <string name="foreca_overcast">Похмуро</string>
-    <string name="foreca_overcast_l_rain">Невеликий дощ</string>
-    <string name="foreca_overcast_l_snow">Невеликий сніг</string>
-    <string name="foreca_overcast_l_wet_snow">Невеликий мокрий сніг</string>
-    <string name="foreca_overcast_rain">Дощ</string>
-    <string name="foreca_overcast_showers">Зливи</string>
-    <string name="foreca_overcast_snow">Сніг</string>
-    <string name="foreca_overcast_snow_showers">Сніг</string>
-    <string name="foreca_overcast_ts_rain">Гроза з дощем</string>
-    <string name="foreca_overcast_ts_snow">Гроза зі снігом</string>
-    <string name="foreca_overcast_ts_wet_snow">Гроза з мокрим снігом</string>
-    <string name="foreca_overcast_wet_snow">Мокрий сніг</string>
-    <string name="foreca_overcast_wet_snow_showers">Мокрий сніг</string>
-    <string name="foreca_partly_cloudy">Подекуди хмарно</string>
-    <string name="foreca_partly_cloudy_l_rain">Невеликий дощ</string>
-    <string name="foreca_partly_cloudy_l_snow">Невеликий сніг</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Невеликий мокрий сніг</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Можлива гроза з дощем</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Можлива гроза зі снігом</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Можлива гроза з мокрим снігом</string>
-    <string name="foreca_partly_cloudy_rain">Дощ</string>
-    <string name="foreca_partly_cloudy_showers">Зливи</string>
-    <string name="foreca_partly_cloudy_snow">Сніг</string>
-    <string name="foreca_partly_cloudy_snow_showers">Сніг</string>
-    <string name="foreca_partly_cloudy_wet_snow">Мокрий сніг</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Мокрий сніг</string>
+    <string name="forecast_chance_of_rain">Возможен дождь</string>
+    <string name="forecast_chance_of_showers">Возможен ливень</string>
+    <string name="forecast_chance_of_snow">Возможен снегопад</string>
+    <string name="forecast_chance_of_snow_showers">Ливни со снегом</string>
+    <string name="forecast_chance_of_storm">Возможен шторм</string>
+    <string name="forecast_chance_of_tstorm">Возможна гроза</string>
+    <string name="forecast_clear">Ясно</string>
+    <string name="forecast_cloudy">Облачно</string>
+    <string name="forecast_cold">Холодно</string>
+    <string name="forecast_drizzle">Моросящий дождь</string>
+    <string name="forecast_dust">Пыль</string>
+    <string name="forecast_fair">Ясно</string>
+    <string name="forecast_flurries">Порывы ветра</string>
+    <string name="forecast_fog">Туман</string>
+    <string name="forecast_freezing_drizzle">Моросящий снег</string>
+    <string name="forecast_freezing_rain">Ледяной дождь</string>
+    <string name="forecast_hail">Град</string>
+    <string name="forecast_haze">Дымка</string>
+    <string name="forecast_heavy_rain">Сильный дождь</string>
+    <string name="forecast_hot">Жара</string>
+    <string name="forecast_icy">Гололед</string>
+    <string name="forecast_light_rain">Небольшой дождь</string>
+    <string name="forecast_light_snow">Небольшой снег</string>
+    <string name="forecast_mist">Туман</string>
+    <string name="forecast_mostly_cloudy">В основном облачно</string>
+    <string name="forecast_mostly_sunny">В основном солнечно</string>
+    <string name="forecast_overcast">Пасмурно</string>
+    <string name="forecast_partly_cloudy">Облачно с прояснениями</string>
+    <string name="forecast_partly_sunny">Иногда солнечно</string>
+    <string name="forecast_rain">Дождь</string>
+    <string name="forecast_rain_and_snow">Дождь со снегом</string>
+    <string name="forecast_rain_showers">Дождь</string>
+    <string name="forecast_sand">Песок</string>
+    <string name="forecast_scattered_showers">Временами ливни</string>
+    <string name="forecast_scattered_thunderstorms">Временами грозы</string>
+    <string name="forecast_showers">Дожди</string>
+    <string name="forecast_sleet">Мокрый снег</string>
+    <string name="forecast_smoke">Дым</string>
+    <string name="forecast_snow">Снег</string>
+    <string name="forecast_snow_showers">Ливни со снегом</string>
+    <string name="forecast_snow_storm">Метель</string>
+    <string name="forecast_sunny">Солнечно</string>
+    <string name="forecast_thunderstorm">Гроза</string>
+    <string name="forecast_thunderstorms">Грозы</string>
+    <string name="forecast_windy">Ветренно</string>
     <string name="just_now">Тільки що</string>
     <string name="loading">Завантаження…</string>
     <string name="location_gps">Поточне місце розташування</string>
@@ -127,7 +114,6 @@
     <string name="menu_delete_theme">видалити тему</string>
     <string name="menu_hourly">Погодинний</string>
     <string name="menu_import">Імпорт теми с SD-карти</string>
-    <string name="menu_indices">Стиль життя</string>
     <string name="menu_locations">Міста</string>
     <string name="menu_moon_phases">Фази місяця</string>
     <string name="menu_themes">Теми</string>
@@ -161,13 +147,10 @@
     <string name="quiet_hours_enabled_on">Тихі години включені</string>
     <string name="quiet_hours_title">Тихі години</string>
     <string name="save_screen_shot_failed">Помилка при збереженні скріншоту</string>
-    <string name="settings_animation_type">Тип анімації</string>
     <string name="settings_category_miui">Прошивки MIUI</string>
     <string name="settings_category_miui_sum">Налаштування для прошивок MIUI, очищення даних погоди MIUI</string>
     <string name="settings_citydb_provider">База міст</string>
     <string name="settings_click_actions">Дії по натисканню</string>
-    <string name="settings_hide_bottom_bar_summary">Приховувати панель з кнопками кліком по екрану</string>
-    <string name="settings_hide_bottom_bar_title">Приховувати нижню панель</string>
     <string name="settings_miui_support_summary">Включає підтримку вбудованих віджетів MIUI</string>
     <string name="settings_miui_support_title">Віджети MIUI</string>
     <string name="settings_miui_v5_summary">Включити, якщо у вас MIUI v5</string>
@@ -186,14 +169,9 @@
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">\#WeatherBZ# Сьогодні в %1$s %2$s, %3$s, %4$s. Оновлено %5$s.</string>
     <string name="share_weather_title">Поділитися прогнозом</string>
-    <string name="settings_about_summary">Інформація про програму</string>
     <string name="settings_about_title">Про програму</string>
-    <string name="settings_animation_download_summary">Завантажувати відео файли анімації з мережі Інтернет (якщо вони не знайдені у локальному сховищі)</string>	
-    <string name="settings_animation_download_title">Завантажувати анімацію</string>
-    <string name="settings_animation_show_summary">Відтворювати анімацію для поточного прогнозу погоди</string>
-    <string name="settings_animation_show_title">Відтворювати анімацію</string>
     <string name="settings_category_animation">Налаштування анімації</string>
-    <string name="settings_category_animation_sum">Налаштування відображення анімації та завантаження відео анімації для поточного прогнозу</string>
+    <string name="settings_category_animation_sum"></string>
     <string name="settings_category_appearance">Зовнішній вигляд</string>
     <string name="settings_category_appearance_sum">Налаштування відображення/приховування елементів інтерфейсу, мова і т.д.</string>
     <string name="settings_category_app_update">Оновлення додатка</string>  
@@ -213,11 +191,8 @@
     <string name="settings_notification_type">Тип повідомлення</string>
     <string name="settings_show_info_summary">Показувати або приховати елементи інтерфейсу</string>
     <string name="settings_show_info_title">Відображення даних</string>
-    <string name="settings_show_weather_icons_summary">Показувати іконки погоди (замість текстового опису стану погоди) в прогнозі на 3 дні</string>
-    <string name="settings_show_weather_icons_title">Іконки погоди</string>
     <string name="settings_update_autoupdate_summary">Автоматичне оновлення прогнозу погоди</string>
     <string name="settings_update_autoupdate_title">Автооновлення</string>
-    <string name="settings_update_interval_summary">Інтервал оновлення прогнозу погоди</string>
     <string name="settings_update_interval_title">Інтервал оновлення</string>
     <string name="settings_update_roaming_summary">Автоматично оновлювати прогноз погоди у роумінгу. Це може збільшити ваші витрати по оплаті рахунків стільникового зв\'язку</string>
     <string name="settings_update_roaming_title">Оновлювати в роумінгу</string>
@@ -266,17 +241,6 @@
     <string name="visibility_units_km">" км"</string>
     <string name="visibility_units_m">" м"</string>
     <string name="visibility_units_mi">" миль"</string>
-    <string name="weather_cond_chancerain">Можливий дощ</string>
-    <string name="weather_cond_cloudy">Хмарно</string>
-    <string name="weather_cond_fog">Туман</string>
-    <string name="weather_cond_lightsnow">Невеликий сніг</string>
-    <string name="weather_cond_overcast">Пахмуро</string>
-    <string name="weather_cond_rain">Дощ</string>
-    <string name="weather_cond_rainstorm">Шквалисті дощі</string>
-    <string name="weather_cond_sleet">Мокрий сніг</string>
-    <string name="weather_cond_snow">Сніг</string>
-    <string name="weather_cond_sunny">Ясно</string>
-    <string name="weather_cond_t_storms">Гроза</string>
     <string name="weather_sunrize">"Світанок: "</string>
     <string name="weather_sunset">"Захід: "</string>
     <string name="widget_name_large_v5">Погода BZ 4x2 v5</string>
@@ -306,7 +270,7 @@
     <string name="weather_feel">"Відчуття: "</string>
     <string name="weather_humidity">"Вологість: "</string>
     <string name="weather_no_city">Місто не вибране</string>
-    <string name="weather_no_conditions_data">Немає данних</string>
+    <string name="weather_no_data">Немає данних</string>
     <string name="weather_pressure">"Тиск: "</string>
     <string name="weather_visibility">"Видимість: "</string>
     <string name="weather_wind">"Вітер: "</string>
