--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,53 +60,52 @@
     <string name="donations_thanks_dialog_title">Thanks!</string>
     <string name="end_time_title">End</string>
     <string name="fetching_location">Getting your position\u2026</string>
-    <string name="foreca_clear">Clear</string>
-    <string name="foreca_cloudy">Cloudy</string>
-    <string name="foreca_cloudy_l_rain">Light rain</string>
-    <string name="foreca_cloudy_l_snow">Light snow</string>
-    <string name="foreca_cloudy_l_wet_snow">Light wet snow</string>
-    <string name="foreca_cloudy_rain">Rain</string>
-    <string name="foreca_cloudy_showers">Showers</string>
-    <string name="foreca_cloudy_snow">Snow</string>
-    <string name="foreca_cloudy_snow_showers">Snow showers</string>
-    <string name="foreca_cloudy_ts_rain">T-storms with rain</string>
-    <string name="foreca_cloudy_ts_snow">T-storms with snow</string>
-    <string name="foreca_cloudy_ts_wet_snow">T-storms with wet snow</string>
-    <string name="foreca_cloudy_wet_snow">Wet snow</string>
-    <string name="foreca_cloudy_wet_snow_showers">Wet snow showers</string>
-    <string name="foreca_mostly_clear">Mostly clear</string>
-    <string name="foreca_mostly_clear_pos_rain">Chance of rain</string>
-    <string name="foreca_mostly_clear_pos_snow">Chance of snow</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Chance of t-storms with rain</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Chance of t-storms with snow</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Chance of wet snow</string>
-    <string name="foreca_overcast">Overcast</string>
-    <string name="foreca_overcast_l_rain">Light rain</string>
-    <string name="foreca_overcast_l_snow">Light snow</string>
-    <string name="foreca_overcast_l_wet_snow">Light wet snow</string>
-    <string name="foreca_overcast_rain">Rain</string>
-    <string name="foreca_overcast_showers">Showers</string>
-    <string name="foreca_overcast_snow">Snow</string>
-    <string name="foreca_overcast_snow_showers">Snow showers</string>
-    <string name="foreca_overcast_ts_rain">T-storms with rain</string>
-    <string name="foreca_overcast_ts_snow">T-storms with snow</string>
-    <string name="foreca_overcast_ts_wet_snow">T-storms with wet snow</string>
-    <string name="foreca_overcast_wet_snow">Wet snow</string>
-    <string name="foreca_overcast_wet_snow_showers">Wet snow showers</string>
-    <string name="foreca_partly_cloudy">Partly cloudy</string>
-    <string name="foreca_partly_cloudy_l_rain">Light rain</string>
-    <string name="foreca_partly_cloudy_l_snow">Light snow</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Light wet snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Chance of t-storms with rain</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Chance of t-storms with snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
-    <string name="foreca_partly_cloudy_rain">Rain</string>
-    <string name="foreca_partly_cloudy_showers">Showers</string>
-    <string name="foreca_partly_cloudy_snow">Snow</string>
-    <string name="foreca_partly_cloudy_snow_showers">Snow showers</string>
-    <string name="foreca_partly_cloudy_wet_snow">Wet snow</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="forecast_chance_of_rain">Chance of Rain</string>
+    <string name="forecast_chance_of_showers">Chance of Showers</string>
+    <string name="forecast_chance_of_snow">Chance of Snow</string>
+    <string name="forecast_chance_of_snow_showers">Snow Showers</string>
+    <string name="forecast_chance_of_storm">Chance of Storm</string>
+    <string name="forecast_chance_of_tstorm">Thunderstorm</string>
+    <string name="forecast_clear">Clear</string>
+    <string name="forecast_cloudy">Cloudy</string>
+    <string name="forecast_cold">Cold</string>
+    <string name="forecast_drizzle">Drizzle</string>
+    <string name="forecast_dust">Dust</string>
+    <string name="forecast_fair">Fair</string>
+    <string name="forecast_flurries">Flurries</string>
+    <string name="forecast_fog">Fog</string>
+    <string name="forecast_freezing_drizzle">Freezing Drizzle</string>
+    <string name="forecast_freezing_rain">Freezing Rain</string>
+    <string name="forecast_hail">Hail</string>
+    <string name="forecast_hot">Hot</string>
+    <string name="forecast_forecast_haze">Haze</string>
+    <string name="forecast_heavy_rain">Heavy Rain</string>
+    <string name="forecast_icy">Icy</string>
+    <string name="forecast_light_rain">Light Rain</string>
+    <string name="forecast_light_snow">Light Snow</string>
+    <string name="forecast_mist">Mist</string>
+    <string name="forecast_mostly_cloudy">Mostly Cloudy</string>
+    <string name="forecast_mostly_sunny">Mostly Sunny</string>
+    <string name="forecast_overcast">Overcast</string>
+    <string name="forecast_partly_cloudy">Partly Cloudy</string>
+    <string name="forecast_partly_sunny">Partly Sunny</string>
+    <string name="forecast_rain">Rain</string>
+    <string name="forecast_rain_and_snow">Rain and Snow</string>
+    <string name="forecast_rain_showers">Rain Showers</string>
+    <string name="forecast_sand">Sand</string>
+    <string name="forecast_scattered_showers">Scattered Showers</string>
+    <string name="forecast_scattered_thunderstorms">Scattered Thunderstorms</string>
+    <string name="forecast_showers">Showers</string>
+    <string name="forecast_sleet">Sleet</string>
+    <string name="forecast_smoke">Smoke</string>
+    <string name="forecast_snow">Snow</string>
+    <string name="forecast_snow_showers">Snow Showers</string>
+    <string name="forecast_snow_storm">Snow Storm</string>
+    <string name="forecast_sunny">Sunny</string>
+    <string name="forecast_thunderstorm">Thunderstorm</string>
+    <string name="forecast_thunderstorms">Thunderstorms</string>
+    <string name="forecast_tornado">Tornado</string>
+    <string name="forecast_windy">Windy</string>
     <string name="changelog">Changelog</string>
     <string name="just_now">Just now</string>
     <string name="loading">Loading\u2026</string>
@@ -252,22 +251,11 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" miles"</string>
-    <string name="weather_cond_cloudy">Cloudy</string>
-    <string name="weather_cond_fog">Fog</string>
-    <string name="weather_cond_chancerain">Chance of rain</string>
-    <string name="weather_cond_lightsnow">Light snow</string>
-    <string name="weather_cond_overcast">Overcast</string>
-    <string name="weather_cond_rain">Rain</string>
-    <string name="weather_cond_rainstorm">Rainstorm</string>
-    <string name="weather_cond_sleet">Sleet</string>
-    <string name="weather_cond_snow">Snow</string>
-    <string name="weather_cond_sunny">Sunny</string>
-    <string name="weather_cond_t_storms">Thunderstorms</string>
     <string name="weather_feel">"RealFeel: "</string>
     <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Humidity: "</string>
     <string name="weather_no_city">No city</string>
-    <string name="weather_no_conditions_data">No weather data</string>
+    <string name="weather_no_data">No data</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Pressure: "</string>
     <string name="weather_sunrize">"Sunrise: "</string>
