--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -8,7 +8,7 @@
     <string name="about_fog">Niebla</string>
     <string name="about_rainstorm">Lluvias torrenciales</string>
     <string name="about_t_storms">Tormentas</string>
-    <string name="about_rain_showers">Chubascos</string>
+    <string name="about_rain_drizzle">Chubascos</string>
     <string name="about_heavy_rain">Lluvia fuerte</string>
     <string name="about_moderate_rain">Lluvia</string>
     <string name="about_light_rain">Lluvia suave</string>
@@ -60,53 +60,48 @@
     <string name="donations_thanks_dialog_title">¡Gracias!</string>
     <string name="end_time_title">Fin</string>
     <string name="fetching_location">Obteniendo ubicación\u2026</string>
-    <string name="foreca_clear">Despejado</string>
-    <string name="foreca_cloudy">Nublado</string>
-    <string name="foreca_cloudy_l_rain">Ligera lluvia</string>
-    <string name="foreca_cloudy_l_snow">Ligera nevada</string>
-    <string name="foreca_cloudy_l_wet_snow">Ligera aguanieve</string>
-    <string name="foreca_cloudy_rain">Lluvia</string>
-    <string name="foreca_cloudy_showers">Chubascos</string>
-    <string name="foreca_cloudy_snow">Nieve</string>
-    <string name="foreca_cloudy_snow_showers">Chubascos de nieve</string>
-    <string name="foreca_cloudy_ts_rain">Tormentas con lluvia</string>
-    <string name="foreca_cloudy_ts_snow">Tormentas con nieve</string>
-    <string name="foreca_cloudy_ts_wet_snow">Tormentas con aguanieve</string>
-    <string name="foreca_cloudy_wet_snow">Aguanieve</string>
-    <string name="foreca_cloudy_wet_snow_showers">Chubascos de aguanieve</string>
-    <string name="foreca_mostly_clear">Despejado</string>
-    <string name="foreca_mostly_clear_pos_rain">Posible lluvia</string>
-    <string name="foreca_mostly_clear_pos_snow">Posibie nieve</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Posibles tormentas y lluvia</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Posibles tormentas y nieve</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Posibles tormentas y aguanieve</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Posible aguanieve</string>
-    <string name="foreca_overcast">Cubierto</string>
-    <string name="foreca_overcast_l_rain">Lluvia suave</string>
-    <string name="foreca_overcast_l_snow">Suave nevada</string>
-    <string name="foreca_overcast_l_wet_snow">Suave aguanieve</string>
-    <string name="foreca_overcast_rain">Lluvia</string>
-    <string name="foreca_overcast_showers">Chubascos</string>
-    <string name="foreca_overcast_snow">Nieve</string>
-    <string name="foreca_overcast_snow_showers">Chubascos de nieve</string>
-    <string name="foreca_overcast_ts_rain">Tormentas con lluvia</string>
-    <string name="foreca_overcast_ts_snow">Tormentas con nieve</string>
-    <string name="foreca_overcast_ts_wet_snow">Tormentas con aguanieve</string>
-    <string name="foreca_overcast_wet_snow">Aguanieve</string>
-    <string name="foreca_overcast_wet_snow_showers">Chubascos de aguanieve</string>
-    <string name="foreca_partly_cloudy">Parcialmente nublado</string>
-    <string name="foreca_partly_cloudy_l_rain">Lluvia suave</string>
-    <string name="foreca_partly_cloudy_l_snow">Suave nevada</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Suave aguanieve</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Posibles tormentas y lluvia</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Posibles tormentas y nieve</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Posibles tormentas y aguanieve</string>
-    <string name="foreca_partly_cloudy_rain">Lluvia</string>
-    <string name="foreca_partly_cloudy_showers">Chubascos</string>
-    <string name="foreca_partly_cloudy_snow">Nieve</string>
-    <string name="foreca_partly_cloudy_snow_showers">Chubascos de nieve</string>
-    <string name="foreca_partly_cloudy_wet_snow">Aguanieve</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Chubascos de aguanieve</string>
+    <string name="forecast_chance_of_rain">Lluvia</string>
+    <string name="forecast_chance_of_showers">Chubascos</string>
+    <string name="forecast_chance_of_snow">Nieve</string>
+    <string name="forecast_chance_of_snow_showers">Nieve</string>
+    <string name="forecast_chance_of_storm">Tormenta</string>
+    <string name="forecast_chance_of_tstorm">Tormenta eléctrica</string>
+    <string name="forecast_clear">Despejado</string>
+    <string name="forecast_cloudy">Nublado</string>
+    <string name="forecast_drizzle">Llovizna</string>
+    <string name="forecast_dust">Polvo</string>
+    <string name="forecast_fair">Favorable</string>
+    <string name="forecast_flurries">Ráfagas de viento</string>
+    <string name="forecast_fog">Niebla</string>
+    <string name="forecast_freezing_drizzle">Llovizna helada</string>
+	<string name="forecast_freezing_rain">Chubascos de nieve</string>
+    <string name="forecast_hail">Granizo</string>
+    <string name="forecast_haze">Neblina</string>
+    <string name="forecast_heavy_rain">Fuerte lluvia</string>
+    <string name="forecast_icy">Helado</string>
+    <string name="forecast_light_rain">Lluvia ligera</string>
+    <string name="forecast_light_snow">Nieve ligera</string>
+    <string name="forecast_mist">Niebla</string>
+    <string name="forecast_mostly_cloudy">Mayormente nublado</string>
+    <string name="forecast_mostly_sunny">Mayormente soleado</string>
+    <string name="forecast_overcast">Nublado</string>
+    <string name="forecast_partly_cloudy">Parcialmente nublado</string>
+    <string name="forecast_partly_sunny">Parcialmente soleado</string>
+    <string name="forecast_rain">Lluvia</string>
+    <string name="forecast_rain_and_snow">Lluvia y nieve</string>
+    <string name="forecast_rain_showers">lluvias</string>
+	<string name="forecast_sand">Arena</string>
+    <string name="forecast_scattered_showers">Chubascos dispersos</string>
+    <string name="forecast_scattered_thunderstorms">Tormentas eléctricas dispersas</string>
+    <string name="forecast_showers">Chubascos</string>
+    <string name="forecast_sleet">Aguanieve</string>
+    <string name="forecast_smoke">Humo</string>
+    <string name="forecast_snow">Nieve</string>
+    <string name="forecast_snow_showers">Chubascos de nieve</string>
+	<string name="forecast_snow_storm">Tormenta de nieve</string>
+    <string name="forecast_sunny">Soleado</string>
+    <string name="forecast_thunderstorm">Tormenta eléctrica</string>
+    <string name="forecast_windy">Tormenta</string>
     <string name="changelog">Lista de cambios</string>
     <string name="just_now">Ahora mismo</string>
     <string name="loading">Cargando\u2026</string>
@@ -252,22 +247,10 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" millas"</string>
-    <string name="weather_cond_cloudy">Nublado</string>
-    <string name="weather_cond_fog">Niebla</string>
-    <string name="weather_cond_chancerain">Probabilidad de lluvia</string>
-    <string name="weather_cond_lightsnow">Nieve ligera</string>
-    <string name="weather_cond_overcast">Cubierto</string>
-    <string name="weather_cond_rain">Lluvia</string>
-    <string name="weather_cond_rainstorm">Temporal de lluvia</string>
-    <string name="weather_cond_sleet">Aguanieve</string>
-    <string name="weather_cond_snow">Nieve</string>
-    <string name="weather_cond_sunny">Soleado</string>
-    <string name="weather_cond_t_storms">Tormentas</string>
     <string name="weather_feel">"Sensación real: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Humedad: "</string>
     <string name="weather_no_city">No hay ciudades</string>
-    <string name="weather_no_conditions_data">No hay datos meteorológicos</string>
+    <string name="weather_no_data">No hay datos meteorológicos</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Presión: "</string>
     <string name="weather_sunrize">"Salida del sol: "</string>
