--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -31,21 +31,16 @@ Lo apprezzo molto!"</string>
     <string name="about_version">Versione:</string>
     <string name="about_author">Autore:</string>
     <string name="about_sunny">Soleggiato</string>
-    <string name="about_sunny_night">Serata limpida</string>
     <string name="about_cloudy">Nuvoloso</string>
-    <string name="about_cloudy_night">Serata nuvolosa</string>
     <string name="about_overcast">Cielo Coperto</string>
     <string name="about_dust">Tempesta di sabbia</string>
     <string name="about_fog">Nebbia</string>
     <string name="about_hailstone">Grandine</string>
     <string name="about_light_rain">Pioggerellina</string>
-    <string name="about_rain">Pioggia</string>
-    <string name="about_showers">Acquazzone</string>
+    <string name="about_rain_drizzle">Acquazzone</string>
     <string name="about_rainstorm">Pioggia intensa</string>
     <string name="about_t_storms">Temporale</string>
     <string name="about_sleet">Nevischio</string>
-    <string name="about_snow">Neve</string>
-    <string name="animation_preview">Anteprima</string>
     <string name="menu_update">Aggiorna</string>
     <string name="menu_settings">Impostazioni</string>
     <string name="menu_locations">"Localita'"</string>
@@ -58,14 +53,12 @@ Lo apprezzo molto!"</string>
     <string name="location_search">Cerca località</string>
     <string name="location_edit">Inserisci la località</string>
     <string name="weather_no_city">Nessuna località</string>
-    <string name="weather_no_conditions_data">Nessun dato meteo</string>
+    <string name="weather_no_data">Nessun dato meteo</string>
     <string name="weather_humidity">"Umidità: "</string>
     <string name="weather_wind">"Vento: "</string>
     <string name="weather_feel">"Percepito: "</string>
     <string name="weather_pressure">"Pressione: "</string>
     <string name="weather_visibility">"Visibilità: "</string>
-    <string name="weather_forecast_empty">--</string>
-    <string name="weather_cond_overcast">Nuvoloso</string>
     <string name="settings_category_update">Aggiornamento</string>
     <string name="settings_category_update_sum">Regola le impostazioni degli aggiornamenti</string>
     <string name="settings_category_animation">Animazioni</string>
@@ -73,24 +66,54 @@ Lo apprezzo molto!"</string>
     <string name="settings_update_interval_title">Intervallo aggiornamenti</string>
     <string name="settings_update_autoupdate_title">Aggiorna in automatico</string>
     <string name="settings_update_autoupdate_summary">Aggiorna automaticamente i dati meteo</string>
-    <string name="settings_animation_show_title">Mostra animazioni</string>
-    <string name="settings_animation_show_summary">Mostra le animazioni a seconda delle condizioni meteo attuali</string>
-    <string name="settings_animation_download_title">Scarica le animazioni</string>
-    <string name="settings_animation_download_summary">Scarica i files video delle animazioni (se non sono già presenti in memoria)</string>
     <string name="settings_about_title">Info</string>
-    <string name="settings_about_summary">Informazioni sul programma e crediti</string>
     <string name="no_provider">Localizzazione fallita - Scegli la località manualmente</string>
     <string name="network_error">Impossibile connettersi al server</string>
     <string name="updating">Aggiornamento…</string>
     <string name="just_now">Proprio ora</string>
     <string name="fetching_location">Localizzazione…</string>
-    <string name="conf_add_widget">Aggiungi Widget</string>
-    <string name="conf_light_skin">Skin Chiara</string>
-    <string name="conf_dark_skin">Skin Scura</string>
-    <string name="conf_choose_skin">Scegli la skin</string>
-    <string name="conf_name">Impostazioni Widget</string>
-    <string name="download_video">Scarica video</string>
-    <string name="conf_no_background">Nessuno sfondo</string>
+	<string name="forecast_chance_of_rain">Possibile pioggia</string>
+    <string name="forecast_chance_of_showers">Possibili rovesci</string>
+    <string name="forecast_chance_of_snow">Possibile neve</string>
+    <string name="forecast_chance_of_snow_showers">Possibile nevischio</string>
+    <string name="forecast_chance_of_storm">Possibile temporale</string>
+    <string name="forecast_chance_of_tstorm">Possibili temporali</string>
+    <string name="forecast_clear">Sereno</string>
+    <string name="forecast_cloudy">Nuvoloso</string>
+    <string name="forecast_drizzle">Pioviggine</string>
+    <string name="forecast_dust">Scuro</string>
+    <string name="forecast_fair">Bel tempo</string>
+    <string name="forecast_flurries">Raffiche</string>
+    <string name="forecast_fog">Nebbia</string>
+    <string name="forecast_freezing_drizzle">Brina</string>
+	<string name="forecast_freezing_rain">Pioggia di congelamento</string>
+    <string name="forecast_hail">Grandine</string>
+    <string name="forecast_haze">Foschìa</string>
+    <string name="forecast_heavy_rain">Forte pioggia</string>
+    <string name="forecast_icy">Gelo</string>
+    <string name="forecast_light_rain">Lieve pioggia</string>
+    <string name="forecast_light_snow">Lieve nevicata</string>
+    <string name="forecast_mist">Lieve nebbia</string>
+    <string name="forecast_mostly_cloudy">Molto nuvoloso</string>
+    <string name="forecast_mostly_sunny">Perlopiù soleggiato</string>
+    <string name="forecast_overcast">Coperto</string>
+    <string name="forecast_partly_cloudy">Parzialmente nuvoloso</string>
+    <string name="forecast_partly_sunny">Parzialmente soleggiato</string>
+    <string name="forecast_rain">Pioggia</string>
+    <string name="forecast_rain_and_snow">Pioggia e neve</string>
+    <string name="forecast_rain_showers">Pioggia</string>
+	<string name="forecast_sand">Sabbia</string>
+    <string name="forecast_scattered_showers">Rovesci diffusi</string>
+    <string name="forecast_scattered_thunderstorms">Temporali diffusi</string>
+    <string name="forecast_showers">Rovesci</string>
+    <string name="forecast_sleet">Nevischio</string>
+    <string name="forecast_smoke">Nebbia</string>
+    <string name="forecast_snow">Neve</string>
+    <string name="forecast_snow_showers">Nevischio</string>
+	<string name="forecast_snow_storm">Tempesta di neve</string>
+    <string name="forecast_sunny">Soleggiato</string>
+    <string name="forecast_thunderstorm">Temporale</string>
+    <string name="forecast_windy">Temporale</string>   
     <string name="settings_category_notification">Notifiche</string>
     <string name="settings_category_notification_sum">"Regola le notifiche meteo nell'area di notifica di sistema"</string>
     <string name="settings_category_network">Impostazioni di Rete</string>
@@ -112,8 +135,6 @@ Lo apprezzo molto!"</string>
     <string name="clear_miui_data_summary">Verranno cancellati e azzerati i dati del MIUI Weather</string>
     <string name="clear_miui_data_dialog">Pulisci MIUI Weather</string>
     <string name="clear_miui_data_dialog_text">Database MIUI Weather Pulito!</string>
-    <string name="settings_show_weather_icons_title">Icone meteo</string>
-    <string name="settings_show_weather_icons_summary">Mostra le icone meteo nelle previsioni 3-giorni</string>
     <string name="settings_notification_text_color_summary">Colore del testo e delle icone</string>
     <string name="settings_notification_color_title">Colore nella barra di stato</string>
     <string name="settings_category_widgets">Widgets</string>
@@ -143,16 +164,12 @@ Lo apprezzo molto!"</string>
     <string name="settings_show_info_title">Mostra dettagli</string>
     <string name="settings_show_info_summary">"Mostra o nascondi elementi nell'interfaccia"</string>
     <string name="settings_notification_type">Notifica Grafica</string>
-    <string name="settings_animation_type">Tipo di Animazione</string>
     <string name="quiet_hours_title">ORE QUIETI</string>
     <string name="quiet_hours_enabled">Attiva le ore quieti</string>
     <string name="quiet_hours_enabled_on">Ore quieti abilitate</string>
     <string name="quiet_hours_enabled_off">Gli aggiornamenti funzioneranno normalmente</string>
     <string name="start_time_title">Inizio</string>
     <string name="end_time_title">Fine</string>
-    <string name="dlg_select_action">"Scegli un'azione"</string>
-    <string name="dlg_go_to_forecast">Vai alle previsioni</string>
-    <string name="dlg_set_as_home">Imposta come \"Città Base\"</string>
     <string name="wind_n">N</string>
     <string name="wind_ne">NE</string>
     <string name="wind_nne">N-NE</string>
