--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -3,7 +3,6 @@
     <string name="about_author">Yazar:</string>
     <string name="about_blizzard">Kar fırtınası</string>
     <string name="about_cloudy">Bulutlu</string>
-    <string name="about_cloudy_night">Bulutlu gece</string>
     <string name="about_dust">Toz</string>
     <string name="about_fog">Sis</string>
     <string name="about_for_translators">Çevirmenler için:</string>
@@ -14,22 +13,18 @@
     <string name="about_light_rain">Hafif Yağmur</string>
     <string name="about_light_snow">Hafif Kar</string>
     <string name="about_overcast">Kapalı</string>
-    <string name="about_rain">Yağmur</string>
-	<string name="about_rain_showers">Sağanak Yağmur</string> 
+	<string name="about_rain_drizzle">Sağanak Yağmur</string>
 	<string name="about_heavy_rain">Şiddetli Yağmur</string>
     <string name="about_moderate_rain">Hafif Sağanak Yağmur</string>
     <string name="about_rainstorm">Yağmur Fırtınası</string>
-    <string name="about_showers">Sağanak</string>
+    <string name="about_rain_drizzle">Sağanak</string>
     <string name="about_sleet">Karla karışık yağmur</string>
-    <string name="about_snow">Kar</string>
 	<string name="about_snow_showers">Sağanak Kar Yağışı</string>
 	<string name="about_moderate_snow">Hafif Kar Yağışı</string>
     <string name="about_social">Sosyal linkler:</string>
     <string name="about_sunny">Açık</string>
-    <string name="about_sunny_night">Açık Gece</string>
     <string name="about_t_storms">Fırtına</string>
     <string name="about_version">Sürüm:</string>
-    <string name="animation_preview">Animasyonları izle</string>
     <string name="app_name">Weather BZ</string>
 	<string name="applying_theme">Tema uygulanıyor\u2026</string>
     <string name="btn_add_location">Konum ekle</string>
@@ -42,19 +37,10 @@
     <string name="clear_miui_data_dialog_text">MIUI verileri silindi</string>
     <string name="clear_miui_data_summary">MIUI verilerini silebilirsiniz</string>
     <string name="close">Kapat</string>
-    <string name="conf_add_widget">Widget ekle</string>
-    <string name="conf_dark_skin">Koyu arayüz</string>
-    <string name="conf_choose_skin">Arayüzü seçin</string>
-    <string name="conf_light_skin">Açık arayüz</string>
-    <string name="conf_name">Widget Ayarları</string>
-    <string name="conf_no_background">Arka plan yok</string>
     <string name="date_format_title">Tarih biçimi</string>
     <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="dialog_color_picker">Renk seçici</string>
-    <string name="dlg_go_to_forecast">Tahminlere git</string>
-    <string name="dlg_select_action">Eylemi seç</string>
-    <string name="dlg_set_as_home">\"Ana ekran\" olarak ayarla</string>
     <string name="donate">Bağış yap</string>
     <string name="donations_button_close">Kapat</string>
     <string name="donations_description">Do you find this application useful?\nSupport it\'s development by flattring it or sending donations to the developer!</string>
@@ -72,56 +58,50 @@
     <string name="donations_paypal_item_name">InApp Donation</string>
     <string name="donations_thanks_dialog">Thanks for donating!\nI really appreciate this!</string>
     <string name="donations_thanks_dialog_title">Thanks!</string>
-    <string name="download_video">Video indir</string>
     <string name="end_time_title">Bitti</string>
     <string name="fetching_location">Konumunuz alınıyor\u2026</string>
-    <string name="foreca_clear">Açık</string>
-    <string name="foreca_cloudy">Bulutlu</string>
-    <string name="foreca_cloudy_l_rain">Hafif yağmur</string>
-    <string name="foreca_cloudy_l_snow">Hafif kar</string>
-    <string name="foreca_cloudy_l_wet_snow">Hafif ıslak kar</string>
-    <string name="foreca_cloudy_rain">Yağmur</string>
-    <string name="foreca_cloudy_showers">Sağanak</string>
-    <string name="foreca_cloudy_snow">Kar</string>
-    <string name="foreca_cloudy_snow_showers">Kar yağışı</string>
-    <string name="foreca_cloudy_ts_rain">Yağmur fırtınası</string>
-    <string name="foreca_cloudy_ts_snow">Kar fırtınası</string>
-    <string name="foreca_cloudy_ts_wet_snow">Islak kar fırtınası</string>
-    <string name="foreca_cloudy_wet_snow">Islak kar</string>
-    <string name="foreca_cloudy_wet_snow_showers">Islak Kar yağışı</string>
-    <string name="foreca_mostly_clear">Çoğunlukla açık</string>
-    <string name="foreca_mostly_clear_pos_rain">Yağmur Olasılığı</string>
-    <string name="foreca_mostly_clear_pos_snow">Kar Olasılığı</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Yağmur fırtınası olasılığı</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Kar fırtınası olasılığı</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Islak kar fırtınası olasılığı</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Islak kar olasılığı</string>
-    <string name="foreca_overcast">Kapalı</string>
-    <string name="foreca_overcast_l_rain">Hafif yağmur</string>
-    <string name="foreca_overcast_l_snow">Hafif kar</string>
-    <string name="foreca_overcast_l_wet_snow">Hafif ıslak kar</string>
-    <string name="foreca_overcast_rain">Yağmur</string>
-    <string name="foreca_overcast_showers">Sağanak</string>
-    <string name="foreca_overcast_snow">Kar</string>
-    <string name="foreca_overcast_snow_showers">Kar yağışı</string>
-    <string name="foreca_overcast_ts_rain">Yağmur fırtınası</string>
-    <string name="foreca_overcast_ts_snow">Kar fırtınası</string>
-    <string name="foreca_overcast_ts_wet_snow">Islak kar fırtınası</string>
-    <string name="foreca_overcast_wet_snow">Islak kar</string>
-    <string name="foreca_overcast_wet_snow_showers">Islak kar sağanağı</string>
-    <string name="foreca_partly_cloudy">Parçalı bulutlu</string>
-    <string name="foreca_partly_cloudy_l_rain">Hafif yağmur</string>
-    <string name="foreca_partly_cloudy_l_snow">Hafif kar</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Hafif ıslak kar</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Yağmur fırtınası olasılığı</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Kar fırtınası olasılığı</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Islak kar fırtınası olasılığı</string>
-    <string name="foreca_partly_cloudy_rain">Yağmur</string>
-    <string name="foreca_partly_cloudy_showers">Sağanak</string>
-    <string name="foreca_partly_cloudy_snow">Kar</string>
-    <string name="foreca_partly_cloudy_snow_showers">Kar yağışı</string>
-    <string name="foreca_partly_cloudy_wet_snow">Islak kar</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Islak kar yağışı</string>
+    <string name="forecast_chance_of_rain">Yağmur İhtimali</string>
+    <string name="forecast_chance_of_showers">Sağanak Yağı</string>
+    <string name="forecast_chance_of_snow">Kar Yağışı ihtimali</string>
+    <string name="forecast_chance_of_snow_showers">Yoğun Kar Yağışı</string>
+    <string name="forecast_chance_of_storm">Rüzgar İhtimali</string>
+    <string name="forecast_chance_of_tstorm">Gök Gürültülü Sağanak</string>
+    <string name="forecast_clear">Açık</string>
+    <string name="forecast_cloudy">Bulutlu</string>
+    <string name="forecast_drizzle">Hafif Yağmur</string>
+    <string name="forecast_dust">Tozlu</string>
+    <string name="forecast_fair">Güzel</string>
+    <string name="forecast_flurries">Kısa Süreli Yağış</string>
+    <string name="forecast_fog">Sis</string>
+    <string name="forecast_freezing_drizzle">Hafif Dolu</string>
+	<string name="forecast_freezing_rain">Dondurucu Yağmur</string>
+    <string name="forecast_hail">Dolu</string>
+    <string name="forecast_haze">Hafif Sis</string>
+    <string name="forecast_heavy_rain">Sağanak Yağmur</string>
+    <string name="forecast_icy">Buzlu</string>
+    <string name="forecast_light_rain">Hafif Yağmur</string>
+    <string name="forecast_light_snow">Hafif Kar</string>
+    <string name="forecast_mist">Hafif Sisli</string>
+    <string name="forecast_mostly_cloudy">Çok Bulutlu</string>
+    <string name="forecast_mostly_sunny">Genellikle Güneşli</string>
+    <string name="forecast_overcast">Kapalı</string>
+    <string name="forecast_partly_cloudy">Parçalı Bulutlu</string>
+    <string name="forecast_partly_sunny">Yer Yer Güneşli</string>
+    <string name="forecast_rain">Yağmur</string>
+    <string name="forecast_rain_and_snow">Kar ve Yağmur</string>
+    <string name="forecast_rain_showers">Yağmur Yağışı</string>
+	<string name="forecast_sand">Kum</string>
+    <string name="forecast_scattered_showers">Aralıklı Sağanak Yağış</string>
+    <string name="forecast_scattered_thunderstorms">Aralıklı Gök gürültülü</string>
+    <string name="forecast_showers">Yağışlı</string>
+    <string name="forecast_sleet">Karla karışık yağmur</string>
+    <string name="forecast_smoke">Dumanlı</string>
+    <string name="forecast_snow">Kar</string>
+    <string name="forecast_snow_showers">Yoğun Kar Yağışı</string>
+	<string name="forecast_snow_storm">Kar fırtınası</string>
+    <string name="forecast_sunny">Güneşli</string>
+    <string name="forecast_thunderstorm">Gök Gürültülü Sağanak</string>
+    <string name="forecast_windy">Rüzgar</string>
     <string name="changelog">Değişiklikler</string>
     <string name="just_now">Şimdi</string>
     <string name="loading">Yükleniyor\u2026</string>
@@ -134,7 +114,6 @@
 	<string name="menu_delete_theme">Temayı sil</string>
     <string name="menu_hourly">Saatlik</string>
 	<string name="menu_import">Temayı hafıza biriminden yükle</string>
-    <string name="menu_indices">Yaşam Stili</string>
     <string name="menu_locations">Konumlar</string>
     <string name="menu_moon_phases">Ay Evreleri</string>
     <string name="menu_settings">Ayarlar</string>
@@ -167,13 +146,7 @@
     <string name="quiet_hours_enabled_off">Güncellemeler her zamanki gibi çalışacak</string>
     <string name="quiet_hours_enabled_on">Sessiz saat açık</string>
     <string name="quiet_hours_title">Sessiz saat</string>
-    <string name="settings_about_summary">Uygulama Bilgileri</string>
     <string name="settings_about_title">Hakkında</string>
-    <string name="settings_animation_download_summary">Güncel hava durumu için animasyon video dosyalarını indirin</string>
-    <string name="settings_animation_download_title">Animasyonları indir</string>
-    <string name="settings_animation_show_summary">Anlık Hava Durumu için animasyon göster</string>
-    <string name="settings_animation_show_title">Animasyonları göster</string>
-    <string name="settings_animation_type">Animasyon türü</string>
     <string name="settings_category_animation">Animasyon</string>
     <string name="settings_category_animation_sum">Animasyon türü</string>
     <string name="settings_category_app_update">Uygulama Güncelleme</string>
@@ -193,8 +166,6 @@
     <string name="settings_click_actions">Tıklama eylemleri</string>
     <string name="settings_check_updates_summary">uygulama başlayınca güncellemeleri kontrol eder</string>
     <string name="settings_check_updates_title">Güncelleme kontrolü</string>
-    <string name="settings_hide_bottom_bar_title">Üst barı gizle</string>
-    <string name="settings_hide_bottom_bar_summary">Tuşlarla alt çubuğunu gizlemek için ekrana dokunun</string>
     <string name="settings_miui_support_summary">MIUI widget desteğini açar</string>
     <string name="settings_miui_support_title">MIUI widget desteği</string>
     <string name="settings_miui_v5_summary">MIUI v5 ROM kullanıyorsanız açın</string>
@@ -207,8 +178,6 @@
     <string name="settings_notification_type">Bildirim türü</string>
     <string name="settings_show_info_summary">Arabirim öğelerini gösterme veya gizleme</string>
     <string name="settings_show_info_title">Bilgileri göster</string>
-    <string name="settings_show_weather_icons_summary">3-günlük tahminlerde hava durumu simgelerini göster</string>
-    <string name="settings_show_weather_icons_title">Hava durumu simgelerini göster</string>
     <string name="settings_time_format_12h">12s saat biçimi</string>
     <string name="settings_update_autoupdate_summary">Tahminleri otomatik olarak güncelle</string>
     <string name="settings_update_autoupdate_title">Otamatik güncelle</string>
@@ -273,22 +242,10 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mil"</string>
-    <string name="weather_cond_cloudy">Bulutlu</string>
-    <string name="weather_cond_fog">Sis</string>
-    <string name="weather_cond_chancerain">Yağmur olasılığı</string>
-    <string name="weather_cond_lightsnow">Hafif kar</string>
-    <string name="weather_cond_overcast">Kapalı</string>
-    <string name="weather_cond_rain">Yağmur</string>
-    <string name="weather_cond_rainstorm">Yağmur fırtınası</string>
-    <string name="weather_cond_sleet">Karla karışık yağmur</string>
-    <string name="weather_cond_snow">Kar</string>
-    <string name="weather_cond_sunny">Açık</string>
-    <string name="weather_cond_t_storms">Gök gürültülü fırtına</string>
     <string name="weather_feel">"Hissedilen: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Nem: "</string>
     <string name="weather_no_city">Şehir yok</string>
-    <string name="weather_no_conditions_data">Hava durumu verisi yok!</string>
+    <string name="weather_no_data">Hava durumu verisi yok!</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Basınç: "</string>
     <string name="weather_sunrize">"GünDoğumu: "</string>
