--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -60,53 +60,48 @@
     <string name="donations_thanks_dialog_title">謝謝!</string>
     <string name="end_time_title">結束</string>
     <string name="fetching_location">獲取您的位置\u2026</string>
-    <string name="foreca_clear">明朗</string>
-    <string name="foreca_cloudy">多雲</string>
-    <string name="foreca_cloudy_l_rain">小雨</string>
-    <string name="foreca_cloudy_l_snow">小雪</string>
-    <string name="foreca_cloudy_l_wet_snow">輕濕雪</string>
-    <string name="foreca_cloudy_rain">雨</string>
-    <string name="foreca_cloudy_showers">驟雨</string>
-    <string name="foreca_cloudy_snow">雪</string>
-    <string name="foreca_cloudy_snow_showers">陣雪</string>
-    <string name="foreca_cloudy_ts_rain">大雷雨</string>
-    <string name="foreca_cloudy_ts_snow">風暴雪</string>
-    <string name="foreca_cloudy_ts_wet_snow">輕濕雪風暴</string>
-    <string name="foreca_cloudy_wet_snow">濕雪</string>
-    <string name="foreca_cloudy_wet_snow_showers">濕陣雪</string>
-    <string name="foreca_mostly_clear">天色清晰</string>
-    <string name="foreca_mostly_clear_pos_rain">可能下雨</string>
-    <string name="foreca_mostly_clear_pos_snow">可能下雪</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">有雷雨的機會</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">有暴雪的機會</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">有輕濕雪風暴的機會</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">有濕陣雪的機會</string>
-    <string name="foreca_overcast">陰天</string>
-    <string name="foreca_overcast_l_rain">細雨</string>
-    <string name="foreca_overcast_l_snow">小雪</string>
-    <string name="foreca_overcast_l_wet_snow">輕濕雪</string>
-    <string name="foreca_overcast_rain">下雨</string>
-    <string name="foreca_overcast_showers">驟雨</string>
-    <string name="foreca_overcast_snow">下雪</string>
-    <string name="foreca_overcast_snow_showers">陣雪</string>
-    <string name="foreca_overcast_ts_rain">大雷雨</string>
-    <string name="foreca_overcast_ts_snow">風暴雪</string>
-    <string name="foreca_overcast_ts_wet_snow">輕濕雪風暴</string>
-    <string name="foreca_overcast_wet_snow">濕雪</string>
-    <string name="foreca_overcast_wet_snow_showers">濕陣雪</string>
-    <string name="foreca_partly_cloudy">晴時多雲</string>
-    <string name="foreca_partly_cloudy_l_rain">小雨</string>
-    <string name="foreca_partly_cloudy_l_snow">小雪</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">輕濕雪</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">可能有大雷雨</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">可能有風暴雪</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">可能有輕濕雪風暴</string>
-    <string name="foreca_partly_cloudy_rain">雨</string>
-    <string name="foreca_partly_cloudy_showers">驟雨</string>
-    <string name="foreca_partly_cloudy_snow">雪</string>
-    <string name="foreca_partly_cloudy_snow_showers">陣雪</string>
-    <string name="foreca_partly_cloudy_wet_snow">濕雪</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">濕陣雪</string>
+    <string name="forecast_chance_of_rain">可能有雨</string>
+    <string name="forecast_chance_of_showers">陣雨機率</string>
+    <string name="forecast_chance_of_snow">可能有雪</string>
+    <string name="forecast_chance_of_snow_showers">陣雪</string>
+    <string name="forecast_chance_of_storm">可能有風暴</string>
+    <string name="forecast_chance_of_tstorm">雷雨</string>
+    <string name="forecast_clear">清除</string>
+    <string name="forecast_cloudy">多雲</string>
+    <string name="forecast_drizzle">細雨</string>
+    <string name="forecast_dust">灰塵</string>
+    <string name="forecast_fair">公平</string>
+    <string name="forecast_flurries">小雪</string>
+    <string name="forecast_fog">霧</string>
+    <string name="forecast_freezing_drizzle">凍毛毛雨</string>
+	<string name="forecast_freezing_rain">凍雨</string>
+    <string name="forecast_hail">冰雹</string>
+    <string name="forecast_haze">陰霾</string>
+    <string name="forecast_heavy_rain">大雨</string>
+    <string name="forecast_icy">冷冰冰</string>
+    <string name="forecast_light_rain">短暫時間有陽光</string>
+    <string name="forecast_light_snow">小雪</string>
+    <string name="forecast_mist">霧</string>
+    <string name="forecast_mostly_cloudy">晴間多雲</string>
+    <string name="forecast_mostly_sunny">晴時多雲</string>
+    <string name="forecast_overcast">陰沉</string>
+    <string name="forecast_partly_cloudy">晴間多雲</string>
+    <string name="forecast_partly_sunny">晴間多雲</string>
+    <string name="forecast_rain">雨</string>
+    <string name="forecast_rain_and_snow">雨和雪</string>
+    <string name="forecast_rain_showers">陣雨</string>
+	<string name="forecast_sand">沙</string>
+    <string name="forecast_scattered_showers">零星陣雨</string>
+    <string name="forecast_scattered_thunderstorms">局部雷雨</string>
+    <string name="forecast_showers">驟雨</string>
+    <string name="forecast_sleet">雨雪</string>
+    <string name="forecast_smoke">吸煙</string>
+    <string name="forecast_snow">雪</string>
+    <string name="forecast_snow_showers">陣雪</string>
+	<string name="forecast_snow_storm">雪凝</string>
+    <string name="forecast_sunny">晴朗</string>
+    <string name="forecast_thunderstorm">雷雨</string>
+    <string name="forecast_windy">風暴</string>
     <string name="changelog">變更</string>
     <string name="just_now">剛才</string>
     <string name="loading">等待\u2026</string>
@@ -252,22 +247,10 @@
     <string name="visibility_units_km">" 公里"</string>
     <string name="visibility_units_m">" 米"</string>
     <string name="visibility_units_mi">" 英里"</string>
-    <string name="weather_cond_cloudy">多雲</string>
-    <string name="weather_cond_fog">霧</string>
-    <string name="weather_cond_chancerain">小雨</string>
-    <string name="weather_cond_lightsnow">小雪</string>
-    <string name="weather_cond_overcast">陰天</string>
-    <string name="weather_cond_rain">雨</string>
-    <string name="weather_cond_rainstorm">暴雨</string>
-    <string name="weather_cond_sleet">雨雪</string>
-    <string name="weather_cond_snow">雪</string>
-    <string name="weather_cond_sunny">晴朗</string>
-    <string name="weather_cond_t_storms">雷雨</string>
     <string name="weather_feel">"體感溫度: "</string>
-    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"濕度: "</string>
     <string name="weather_no_city">沒有城市</string>
-    <string name="weather_no_conditions_data">沒有天氣資料</string>
+    <string name="weather_no_data">沒有天氣資料</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"氣壓: "</string>
     <string name="weather_sunrize">"日出: "</string>
